--- a/appendix-04-useful-development-tools.html
+++ b/appendix-04-useful-development-tools.html
@@ -260,7 +260,7 @@ fn main() {
 </code></pre></pre>
 <p>關於更多 Clippy 的資訊，請查閱<a href="https://github.com/rust-lang/rust-clippy">它的技術文件</a>。</p>
 <h3><a class="header" href="#使用-rust-language-server-整合-ide" id="使用-rust-language-server-整合-ide">使用 Rust Language Server 整合 IDE</a></h3>
-<p>為了協助 IDE 的整合，Rust 專案有發佈 <em>Rust Language Server</em>（<code>rls</code>）。此工具會與 <a href="http://langserver.org/">Language Server Protocol</a> 溝通，這是 IDE 與程式語言彼此溝通的協定規格。<code>rls</code> 可用於各種不同的客戶端，像是 <a href="https://marketplace.visualstudio.com/items?itemName=rust-lang.rust">Visual Studio Code 的 Rust 插件</a>。</p>
+<p>為了協助 IDE 的整合，Rust 專案有發佈 <strong>Rust Language Server</strong>（<code>rls</code>）。此工具會與 <a href="http://langserver.org/">Language Server Protocol</a> 溝通，這是 IDE 與程式語言彼此溝通的協定規格。<code>rls</code> 可用於各種不同的客戶端，像是 <a href="https://marketplace.visualstudio.com/items?itemName=rust-lang.rust">Visual Studio Code 的 Rust 插件</a>。</p>
 <p>要安裝 <code>rls</code> 的話，輸入以下命令：</p>
 <pre><code class="language-console">$ rustup component add rls
 </code></pre>
