--- a/appendix-05-editions.html
+++ b/appendix-05-editions.html
@@ -174,7 +174,7 @@
                         <h2><a class="header" href="#附錄-e---版號" id="附錄-e---版號">附錄 E - 版號</a></h2>
 <p>在第一章中，你會看到 <code>cargo new</code> 會在 <em>Cargo.toml</em> 檔案中加上一些關於版號（edition）的詮釋資料。此附錄會講解其意義！</p>
 <p>Rust 語言與編譯器有一個為其六週的發佈循環，這意味著使用者可能定期獲得一些新功能。其他程式設計語言可能會發佈較大的更新但就會比較不頻繁。Rust 傾向於較頻繁地發佈小更新。過一段時間後，這些所有變更會漸漸累積起來。不過隨著一次次的發佈，回過頭來看可能會發覺「哇！Rust 1.10 與 Rust 1.31 之間的變化真大！」</p>
-<p>所以每個兩到三年，Rust 團隊會產生新的 Rust <em>版號（edition）</em>。每個版本會整合已推出的功能成一整個附有完整技術文件更新與工具的套件。然後新的版號就會包含在每六週循環過程的發佈之中。</p>
+<p>所以每個兩到三年，Rust 團隊會產生新的 Rust <strong>版號（edition）</strong>。每個版本會整合已推出的功能成一整個附有完整技術文件更新與工具的套件。然後新的版號就會包含在每六週循環過程的發佈之中。</p>
 <p>版號對不同客群提供不同功能：</p>
 <ul>
 <li>對於活躍的 Rust 使用者來說，新的版號將累積的變更整合成容易理解的單一套件。</li>
