--- a/ch03-01-variables-and-mutability.html
+++ b/ch03-01-variables-and-mutability.html
@@ -205,9 +205,9 @@ error: could not compile `variables`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>此範例顯示了編譯器如何協助你找到你程式碼的錯誤。雖然看到編譯器錯誤訊息總是令人感到沮喪，但這通常是為了讓你知道你的程式無法安全地完成你想讓它完成的任務。它們<em>不代表</em>你不是個優秀的程式設計師！有經驗的 Rustaceans 時常會與編譯器錯誤訊息打交道。</p>
+<p>此範例顯示了編譯器如何協助你找到你程式碼的錯誤。雖然看到編譯器錯誤訊息總是令人感到沮喪，但這通常是為了讓你知道你的程式無法安全地完成你想讓它完成的任務。它們<strong>不代表</strong>你不是個優秀的程式設計師！有經驗的 Rustaceans 時常會與編譯器錯誤訊息打交道。</p>
 <p>這則錯誤訊息表示錯誤發生的原因：「cannot assign twice to immutable variable x」，因為你嘗試第二次賦值給 <code>x</code> 變數。</p>
-<p>當我們嘗試改變一個原先設計為不可變的變數時，能夠產生編譯時錯誤是很重要的。因為這樣的情況很容易導致程式錯誤。如果我們有一部分的程式碼在執行時認為某個數值絕對不會改變，但另一部分的程式碼卻更改了其值，那麼這就有可能讓前一部分的程式碼就可能以無法預測的方式運行。這樣的程式錯誤的起因是很難追蹤的，尤其是當第二部分的程式碼<em>偶而</em>才會改變其值。</p>
+<p>當我們嘗試改變一個原先設計為不可變的變數時，能夠產生編譯時錯誤是很重要的。因為這樣的情況很容易導致程式錯誤。如果我們有一部分的程式碼在執行時認為某個數值絕對不會改變，但另一部分的程式碼卻更改了其值，那麼這就有可能讓前一部分的程式碼就可能以無法預測的方式運行。這樣的程式錯誤的起因是很難追蹤的，尤其是當第二部分的程式碼<strong>偶而</strong>才會改變其值。</p>
 <p>在 Rust 中，編譯器會保證當你宣告一個數值不會被改變時，它就絕對不會被改變。這代表當你讀寫程式碼時，你不需要去追蹤該值可能會被改變，讓你的程式碼更容易推導。</p>
 <p>但同時可變性也是非常有用的，變數只有預設是不可變的，就如同第二章一樣你可以在變數名稱前面加上 <code>mut</code> 讓它們可以成為可變的。除了允許改變其值之外，<code>mut</code> 向未來的讀取者表明了其他部分的程式碼將會改變此變數的數值。</p>
 <p>舉例來說，讓我們改變 <em>src/main.rs</em>  成以下程式碼：</p>
@@ -230,9 +230,9 @@ x 的數值為：6
 <p>當使用 <code>mut</code> 時，我們可以將 <code>x</code> 的數值從 <code>5</code> 改變為 <code>6</code>。有時候比起只有不可變變數，你會想要將某些變數改為可變的，讓它更容易編寫。</p>
 <p>當然除了防止程式錯誤以外，這還有很多權衡取捨。舉例來說，當你擁有一個大型資料結構時，變更其值通常會比複製然後返回重新分配的實例還來的快。不過在比較小的資料結構，用函式程式語言的風格產生新的實例會比較容易思考，所以損失一些效能會比損失閱讀性來得好。</p>
 <h3><a class="header" href="#變數與常數的差異" id="變數與常數的差異">變數與常數的差異</a></h3>
-<p>不能夠變更數值的情況可能會讓你聯想到其他程式語言都有的概念：<em>常數</em>（<em>constants</em>）。和不可變變數一樣，常數會讓數值與名稱綁定且不允許被改變，但是不可變變數與常數還是有些差異。</p>
+<p>不能夠變更數值的情況可能會讓你聯想到其他程式語言都有的概念：<strong>常數（constants）</strong>。和不可變變數一樣，常數會讓數值與名稱綁定且不允許被改變，但是不可變變數與常數還是有些差異。</p>
 <p>首先，你無法在使用常數使用 <code>mut</code>，常數不是預設不可變，它們永遠都不可變。</p>
-<p>如果你使用 <code>const</code> 宣告而非 <code>let</code> 的話，你<em>必須</em>指明型別。我們會在下一章<a href="ch03-02-data-types.html#%E8%B3%87%E6%96%99%E5%9E%8B%E5%88%A5">「資料型別」</a><!-- ignore -->詳細解釋型別與型別詮釋，所以現在先別擔心細節。你只需要先知道你永遠必須先詮釋常數的型別。</p>
+<p>如果你使用 <code>const</code> 宣告而非 <code>let</code> 的話，你<strong>必須</strong>指明型別。我們會在下一章<a href="ch03-02-data-types.html#%E8%B3%87%E6%96%99%E5%9E%8B%E5%88%A5">「資料型別」</a><!-- ignore -->詳細解釋型別與型別詮釋，所以現在先別擔心細節。你只需要先知道你永遠必須先詮釋常數的型別。</p>
 <p>常數可以被定義在任一有效範圍，包含全域有效範圍。這讓它們非常有用，讓許多部分的程式碼都能夠知道它們。</p>
 <p>最後一個差別是常數只能被常數表達式設置，而不能用函式的結果或任一在運行時產生的其他數值設置。</p>
 <p>以下為一個常數名稱被宣告為 <code>MAX_POINTS</code> 的範例，它的數值被設為 100,000。（Rust 的常數命名規則為使用全部英文大寫並用底寫區隔每個單字，數值可以用底線區隔來改善可讀性）：</p>
@@ -245,7 +245,7 @@ x 的數值為：6
 <p>在整支程式運行時，常數在它們的範圍內都是有效的，這讓它們在處理應用程式中需要被許多程式碼部份所知道的數值的情況下是非常好的選擇，像是一款遊戲中玩家能夠得到的最高分數或者光速的數值。</p>
 <p>將會擴散到所有程式碼的數值定義為常數，對於幫助未來程式碼的維護者理解是非常好的選擇。這也讓未來需要更新數值的話，你知道需要修改寫死的地方就好。</p>
 <h3><a class="header" href="#遮蔽shadowing" id="遮蔽shadowing">遮蔽（Shadowing）</a></h3>
-<p>如同你在猜謎遊戲教學所看到的，在第二章<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore --> 你可以用之前的變數再次宣告新的變數，然後新的變數就會遮蔽之前的變數。Rustaceans 會說第一個變數被第二個變數所<em>遮蔽</em>了，這代表該變數被使用時會拿到第二個變數的數值。我們可以用 <code>let</code> 關鍵字來重複宣告相同的變數名稱來遮蔽一個變數：</p>
+<p>如同你在猜謎遊戲教學所看到的，在第二章<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore --> 你可以用之前的變數再次宣告新的變數，然後新的變數就會遮蔽之前的變數。Rustaceans 會說第一個變數被第二個變數所<strong>遮蔽</strong>了，這代表該變數被使用時會拿到第二個變數的數值。我們可以用 <code>let</code> 關鍵字來重複宣告相同的變數名稱來遮蔽一個變數：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 5;
