--- a/ch05-03-method-syntax.html
+++ b/ch05-03-method-syntax.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#方法語法" id="方法語法">方法語法</a></h2>
-<p><em>方法</em>（<em>Methods</em>）和函式類似，它們都用 <code>fn</code> 關鍵字並加上它們名稱來宣告，它們都有參數與回傳值，然後它們包含一些程式碼能夠在其他地方呼叫它們。不過，方法與函式不同的地方在於它們是針對結構體定義的（或是枚舉和特徵物件，我們會在第六章與第十七章分別介紹它們），且它們第一個參數永遠是 <code>self</code>，這代表的是呼叫該方法的結構體實例。</p>
+<p><strong>方法</strong>（Methods）和函式類似，它們都用 <code>fn</code> 關鍵字並加上它們名稱來宣告，它們都有參數與回傳值，然後它們包含一些程式碼能夠在其他地方呼叫它們。不過，方法與函式不同的地方在於它們是針對結構體定義的（或是枚舉和特徵物件，我們會在第六章與第十七章分別介紹它們），且它們第一個參數永遠是 <code>self</code>，這代表的是呼叫該方法的結構體實例。</p>
 <h3><a class="header" href="#定義方法" id="定義方法">定義方法</a></h3>
 <p>讓我們把 <code>Rectangle</code> 作為參數的 <code>area</code> 函式轉換成定義在 <code>Rectangle</code> 內的 <code>area</code> 方法，如範例 5-13 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -201,14 +201,14 @@ fn main() {
 }
 </code></pre></pre>
 <p><span class="caption">範例 5-13：在 <code>Rectangle</code> 中定義 <code>area</code> 方法</span></p>
-<p>要定義 <code>Rectangle</code> 中的方法，我們先從 <code>impl</code>（implementation） 區塊開始。再來將 <code>area</code> 移入 <code>impl</code> 的大括號中，並將簽名中的第一個參數（在此例中是唯一一個）與其本體中用到的地方改成 <code>self</code>。在 <code>main</code> 中我們原先使用 <code>rect1</code> 作為引數呼叫的 <code>area</code>，可以改成使用<em>方法語法</em>（<em>method syntax</em>）來呼叫 <code>Rectangle</code> 的 <code>area</code> 方法。方法語法在實例後面呼叫，我們在其之後加上句點、方法名稱、括號然後任何所需的引數。</p>
+<p>要定義 <code>Rectangle</code> 中的方法，我們先從 <code>impl</code>（implementation） 區塊開始。再來將 <code>area</code> 移入 <code>impl</code> 的大括號中，並將簽名中的第一個參數（在此例中是唯一一個）與其本體中用到的地方改成 <code>self</code>。在 <code>main</code> 中我們原先使用 <code>rect1</code> 作為引數呼叫的 <code>area</code>，可以改成使用<strong>方法語法</strong>（method syntax）來呼叫 <code>Rectangle</code> 的 <code>area</code> 方法。方法語法在實例後面呼叫，我們在其之後加上句點、方法名稱、括號然後任何所需的引數。</p>
 <p>在 <code>area</code> 的簽名中，我們使用 <code>&amp;self</code> 而非 <code>rectangle: &amp;Rectangle</code>，這是因為此方法位於 <code>impl Rectangle</code> 底下，Rust 知道 <code>self</code> 的型別為 <code>Rectangle</code>。請注意我們仍然在 <code>self</code> 使用 <code>&amp;</code>，如同我們之前用的 <code>&amp;Rectangle</code>。方法可以取走 <code>self</code> 的所有權、像這裡一樣借用不可變的 <code>self</code> 或借用可變的 <code>self</code>，如同其他參數一樣。</p>
 <p>我們之所以選擇 <code>&amp;self</code> 的原因和我們在之前函式版本的 <code>&amp;Rectangle</code> 一樣，我們不想取得所有權，只想讀取結構體的資料，而非寫入它。如果我們想要透過方法改變實例的數值的話，我們會使用 <code>&amp;mut self</code> 作為第一個參數。而只使用 <code>self</code> 取得所有權的方法更是非常少見，這種使用技巧通常是為了想改變 <code>self</code> 成你想要的樣子，並且希望能避免原本被改變的實例繼續被呼叫。</p>
 <p>使用方法而非函式最大的好處是，除了可以使用方法語法而不必在方法簽名重複 <code>self</code> 的型別之外，其更具組織性。我們將所有一個型別所能做的事都放入 <code>impl</code> 區塊中了，而不必讓未來的使用者在茫茫函式庫中尋找 <code>Rectangle</code> 的功能。</p>
 <blockquote>
 <h3><a class="header" href="#--運算子跑去哪了" id="--運算子跑去哪了"><code>-&gt;</code> 運算子跑去哪了？</a></h3>
 <p>在 C 與 C++ 中，我們有兩種呼叫方式的運算元：我們會用 <code>.</code> 來直接呼叫物件的方法；用 <code>-&gt;</code> 來呼叫需要先解引用的物件。換句話說，如果 <code>object</code> 是指標的話，<code>object-&gt;something()</code> 就會像是<code>(*object).something()</code>。</p>
-<p>Rust 沒有提供 <code>-&gt;</code> 這樣的運算子。相反地 Rust 有個功能叫做 <em>自動引用與解引用</em>（<em>automatic referencing and dereferencing</em>）。呼叫方法是 Rust 少數會有這樣行為的地方。</p>
+<p>Rust 沒有提供 <code>-&gt;</code> 這樣的運算子。相反地 Rust 有個功能叫做<strong>自動引用與解引用（automatic referencing and dereferencing）</strong>。呼叫方法是 Rust 少數會有這樣行為的地方。</p>
 <p>運作方式如下：當你呼叫方法像是 <code>object.something()</code> 時，Rust 會自動加上<code>&amp;</code>、<code>&amp;mut</code> 或 <code>*</code>，以便符合方法簽名。換句話說，以下範例是相同的：</p>
 </blockquote>
 <!-- CAN'T EXTRACT SEE BUG TODO -->
@@ -303,7 +303,7 @@ rect1 能容納 rect3 嗎？false
 <p><span class="caption">範例 5-15：在 <code>Rectangle</code> 中實作了取得其他 <code>Rectangle</code> 作為參數的 <code>can_hold</code> 方法</span></p>
 <p>當我們用範例 5-14 的 <code>main</code> 函式執行此程式碼的話，我們會得到預期的輸出結果。方法可以在參數 <code>self</code> 之後接收更多參數，而那些參數就和函式中的參數用法一樣。</p>
 <h3><a class="header" href="#關聯函式" id="關聯函式">關聯函式</a></h3>
-<p><code>impl</code> 區塊另一個實用的功能是，我們允許在 <code>impl</code> 內定義函式且無需以 <code>self</code> 作為參數。這叫叫做<em>關聯函式</em>（<em>associated functions</em>），因為它們與結構體是相關的。它們仍然是函式而非方法，因為它們沒有用到結構體的實例。你已經用到了 <code>String::from</code> 此關聯函式。</p>
+<p><code>impl</code> 區塊另一個實用的功能是，我們允許在 <code>impl</code> 內定義函式且無需以 <code>self</code> 作為參數。這叫叫做<strong>關聯函式（associated functions）</strong>，因為它們與結構體是相關的。它們仍然是函式而非方法，因為它們沒有用到結構體的實例。你已經用到了 <code>String::from</code> 此關聯函式。</p>
 <p>關聯函式很常用作建構子，來產生新的結構體實例。舉例來說，我們可以提供一個只接收一個維度作為參數的關聯函式，讓它賦值給寬度與長度，讓我們可以用 <code>Rectangle</code> 來產生正方形，而不必提供兩次相同的值：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#[derive(Debug)]
