--- a/ch06-01-defining-an-enum.html
+++ b/ch06-01-defining-an-enum.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#定義枚舉" id="定義枚舉">定義枚舉</a></h2>
-<p>讓我們看一個程式碼表達的例子，來看看為何此時用枚舉會比結構體更恰當且實用。假設我們要使用 IP 位址，而且現在有兩個主要的標準能使用 IP 位址：IPv4 與 IPv6。這些是我們的程式碼可能會遇到的 IP 位址，我們可以<strong>枚舉</strong>（<strong>enumerate</strong>）出所有可能的變體，這正是枚舉的由來。</p>
+<p>讓我們看一個程式碼表達的例子，來看看為何此時用枚舉會比結構體更恰當且實用。假設我們要使用 IP 位址，而且現在有兩個主要的標準能使用 IP 位址：IPv4 與 IPv6。這些是我們的程式碼可能會遇到的 IP 位址，我們可以<strong>枚舉</strong>（enumerate）出所有可能的變體，這正是枚舉的由來。</p>
 <p>任何 IP 位址可以是第四版或第六版，但不是同時存在。IP 位址這樣的特性非常適合使用枚舉資料結構，因為枚舉的值只能是其中一個變體。第四版與第六版同時都屬於 IP 位址，所以當有程式碼要處理任何類型的 IP 位址時，它們都應該被視為相同型別。</p>
 <p>要表達這樣的概念，我們可以定義 <code>IpAddrKind</code> 枚舉和列出 IP 位址可能的類型 <code>V4</code> 和 <code>V6</code>。這些稱為枚舉的變體（variants）：</p>
 <pre><pre class="playground"><code class="language-rust">enum IpAddrKind {
@@ -363,7 +363,7 @@ struct ChangeColorMessage(i32, i32, i32); // 元組結構體
 <p>讓我們再看看另一個標準函式庫內非常常見且實用的枚舉：<code>Option</code>。</p>
 <h3><a class="header" href="#option-枚舉相對於空值的優勢" id="option-枚舉相對於空值的優勢"><code>Option</code> 枚舉相對於空值的優勢</a></h3>
 <p>在之前的段落，我們看到了如何使用 <code>IpAddr</code> 枚舉，來讓我們利用 Rust 的型別系統來為我們程式中的資料附加更多資訊。在此段落我們將來研究 <code>Option</code>，這是在標準函式庫中定義的另一種枚舉。<code>Option</code> 廣泛運用在許多場合，它能表示一個數值可能有某個東西，或者什麼都沒有。在型別系統中表達這樣的概念可以讓編譯器檢查我們是否都處理完我們該處理的情況了。這樣的功能可以防止其他程式語言中極度常見的程式錯誤。</p>
-<p>程式語言設計通常要考慮哪些功能是你要的，但同時哪些功能是你不要的也很重要。Rust 沒有像其他許多語言都有空值。<strong>空值</strong>（<strong>Null</strong>）代表的是沒有任何數值。在有空值的語言，所有變數都有兩種可能：空值或非空值。</p>
+<p>程式語言設計通常要考慮哪些功能是你要的，但同時哪些功能是你不要的也很重要。Rust 沒有像其他許多語言都有空值。<strong>空值</strong>（Null）代表的是沒有任何數值。在有空值的語言，所有變數都有兩種可能：空值或非空值。</p>
 <p>而其發明者 Tony Hoare 在他 2009 的演講「空引用：造成數十億損失的錯誤」（“Null References: The Billion Dollar Mistake”）中提到：</p>
 <blockquote>
 <p>我稱它為我十億美元級的錯誤。當時我正在為一門物件導向語言設計第一個全方位的引用型別系統。我當時的目標是透過編譯器自動檢查來確保所有的引用都是安全的。但我無法抗拒去加入空引用的誘惑，因為實作的方式實在太簡單了。這導致了無數的錯誤、漏洞與系統當機，在接下來的四十年中造成了大概數十億美金的痛苦與傷害。</p>
