--- a/ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html
+++ b/ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html
@@ -175,8 +175,8 @@
 <p>要展示 Rust 如何從模組樹中找到一個項目，我們要使用和查閱檔案系統時一樣的路徑方法。如果我們想要呼叫函式，我們需要知道它的路徑：</p>
 <p>路徑可以有兩種形式：</p>
 <ul>
-<li><em>絕對路徑（absolute path）</em> 是從 crate 的源頭開始找起，用 crate 的名稱或 <code>crate</code> 作為起頭。</li>
-<li><em>相對路徑（relative path）</em> 則是從本身的模組開始，使用 <code>self</code>、<code>super</code>或是當前模組的標識符（identifiers）。</li>
+<li><strong>絕對路徑</strong>（absolute path）是從 crate 的源頭開始找起，用 crate 的名稱或 <code>crate</code> 作為起頭。</li>
+<li><strong>相對路徑</strong>（relative path）則是從本身的模組開始，使用 <code>self</code>、<code>super</code>或是當前模組的標識符（identifiers）。</li>
 </ul>
 <p>無論是絕對或相對路徑其後都會接著一或多個標識符，並使用雙冒號（<code>::</code>）區隔開來。</p>
 <p>讓我們回頭看看範例 7-1，我們要如何呼叫函式 <code>add_to_waitlist</code> 呢？這就和問函式 <code>add_to_waitlist</code> 在哪的問題是一樣的。在範例 7-3，我們移除了一些模組與函式來精簡程式碼的呈現方式。我們會展示兩種從 crate 源頭定義的 <code>eat_at_restaurant</code> 函式內呼叫 <code>add_to_waitlist</code> 的方法。<code>eat_at_restaurant</code> 函式是我們函式庫 crate 公開 API 的一部分，所以我們會加上 <code>pub</code> 關鍵字。在<a href="ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html#%E4%BD%BF%E7%94%A8-pub-%E9%97%9C%E9%8D%B5%E5%AD%97%E5%85%AC%E9%96%8B%E8%B7%AF%E5%BE%91">「使用 <code>pub</code> 關鍵字公開路徑」</a><!-- ignore -->的段落中，我們會提到更多 <code>pub</code> 的細節。請注意此範例還不能編譯，我們等等會解釋原因。</p>
@@ -224,7 +224,7 @@ To learn more, run the command again with --verbose.
 </code></pre>
 <p><span class="caption">範例 7-4：範例 7-3 嘗試編譯程式碼出現的錯誤</span></p>
 <p>錯誤訊息表示 <code>hosting</code> 模組是私有的。換句話說，我們指定 <code>hosting</code> 模組與 <code>add_to_waitlist</code> 函式的路徑是正確的，但是因為它沒有私有部分的存取權，所以 Rust 不讓我們使用。</p>
-<p>模組不僅用來組織你的程式碼，它們還定義了 Rust 的<em>隱私界限（privacy boundary）</em>：這是條封裝實作細節讓外部程式碼無法看到、呼叫或依賴的界限。所以你想要建立私有的函式或結構體，你可以將它們放入模組內。</p>
+<p>模組不僅用來組織你的程式碼，它們還定義了 Rust 的<strong>隱私界限（privacy boundary）</strong>：這是條封裝實作細節讓外部程式碼無法看到、呼叫或依賴的界限。所以你想要建立私有的函式或結構體，你可以將它們放入模組內。</p>
 <p>Rust 隱私權的運作方式是預設所有的項目（函式、方法、結構體、枚舉、模組與常數）都是私有的。上層模組的項目無法使用下層模組的私有項目，但下層模組能使用它們上方所有模組的項目。這麼做的原因是因為下層模組用來實現實作細節，而下層模組應該要能夠看到在自己所定義的地方的其他內容。讓我們繼續用餐廳做比喻的話，我們可以想像隱私權規則就像是餐廳的後臺辦公室。對餐廳顧客來說裡面發生什麼事情都是未知的，但是辦公室經理可以知道經營餐廳時的所有事物。</p>
 <p>Rust 選擇這樣的模組系統，讓內部實作細節預設都是隱藏起來的。這樣一來，你就能知道內部哪些程式碼需要修改，而不會破壞到外部的程式碼。不過你可以使用 <code>pub</code> 關鍵字來讓下層模組內部的一些程式碼公開給上層模組來使用。</p>
 <h3><a class="header" href="#使用-pub-關鍵字公開路徑" id="使用-pub-關鍵字公開路徑">使用 <code>pub</code> 關鍵字公開路徑</a></h3>
@@ -268,7 +268,7 @@ error: could not compile `restaurant`.
 To learn more, run the command again with --verbose.
 </code></pre>
 <p><span class="caption">範例 7-6：編譯範例 7-5 時產生的錯誤</span></p>
-<p>到底發生了什麼事？在 <code>mod hosting</code> 之前加上 <code>pub</code> 關鍵字確實公開了模組。有了這項修改後，我們的確可以在取得 <code>front_of_house</code> 的後繼續進入 <code>hosting</code>。但是 <code>hosting</code> 的所有<em>內容</em>仍然是私有的。模組中的 <code>pub</code> 關鍵字只會讓該模組公開讓上層模組使用而已。</p>
+<p>到底發生了什麼事？在 <code>mod hosting</code> 之前加上 <code>pub</code> 關鍵字確實公開了模組。有了這項修改後，我們的確可以在取得 <code>front_of_house</code> 的後繼續進入 <code>hosting</code>。但是 <code>hosting</code> 的所有<strong>內容</strong>仍然是私有的。模組中的 <code>pub</code> 關鍵字只會讓該模組公開讓上層模組使用而已。</p>
 <p>範例 7-6 的錯誤訊息表示 <code>add_to_waitlist</code> 函式是私有的。隱私權規則如同模組一樣適用於結構體、枚舉、函式與方法。</p>
 <p>讓我們在 <code>add_to_waitlist</code> 的函式定義加上 <code>pub</code> 公開它吧，如範例 7-7 所示。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
