--- a/ch08-01-vectors.html
+++ b/ch08-01-vectors.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#透過向量儲存列表" id="透過向量儲存列表">透過向量儲存列表</a></h2>
-<p>我們第一個要來看的集合是 <code>Vec&lt;T&gt;</code> 常稱為<em>向量（vector）</em> 。向量允許你在一個資料結構儲存不止一個數值，而且該結構的記憶體會接連排列所有數值。它們很適合用來處理你手上的項目列表，像是一個檔案中每行的文字，或是購物車內每項物品。</p>
+<p>我們第一個要來看的集合是 <code>Vec&lt;T&gt;</code> 常稱為<strong>向量</strong>（vector）。向量允許你在一個資料結構儲存不止一個數值，而且該結構的記憶體會接連排列所有數值。它們很適合用來處理你手上的項目列表，像是一個檔案中每行的文字，或是購物車內每項物品。</p>
 <h3><a class="header" href="#建立新的向量" id="建立新的向量">建立新的向量</a></h3>
 <p>要建立一個新的空向量的話，我們可以呼叫 <code>Vec::new</code> 函式，如範例 8-1 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
