--- a/ch09-03-to-panic-or-not-to-panic.html
+++ b/ch09-03-to-panic-or-not-to-panic.html
@@ -186,18 +186,18 @@
     let home: IpAddr = &quot;127.0.0.1&quot;.parse().unwrap();
 <span class="boring">}
 </span></code></pre></pre>
-<p>我們傳遞寫死的字串來建立 <code>IpAddr</code> 的實例。我們可以看出 <code>127.0.0.1</code> 是完全合理的 IP 位址，所以這邊我們可以直接 <code>unwrap</code>。不過使用寫死的合理字串並不會改變 <code>parse</code> 方法的回傳型別，我們還是會取得 <code>Result</code> 數值，編譯器仍然會要我們處理 <code>Result</code> 並認為 <code>Err</code> 變體是有可能發生的。因為編譯器並沒有聰明到可以看出此字串是個有效的 IP 位址。如果 IP 位址的字串是來自使用者輸入而非我們寫死進程式的話，它<em>的確</em>有可能會失敗，這時我們就得要認真處理 <code>Result</code> 了。</p>
+<p>我們傳遞寫死的字串來建立 <code>IpAddr</code> 的實例。我們可以看出 <code>127.0.0.1</code> 是完全合理的 IP 位址，所以這邊我們可以直接 <code>unwrap</code>。不過使用寫死的合理字串並不會改變 <code>parse</code> 方法的回傳型別，我們還是會取得 <code>Result</code> 數值，編譯器仍然會要我們處理 <code>Result</code> 並認為 <code>Err</code> 變體是有可能發生的。因為編譯器並沒有聰明到可以看出此字串是個有效的 IP 位址。如果 IP 位址的字串是來自使用者輸入而非我們寫死進程式的話，它<strong>的確</strong>有可能會失敗，這時我們就得要認真處理 <code>Result</code> 了。</p>
 <h3><a class="header" href="#錯誤處理的指導原則" id="錯誤處理的指導原則">錯誤處理的指導原則</a></h3>
 <p>當你的程式碼可能會導致嚴重狀態的話，就建議讓你的程式恐慌。這裡的嚴重狀態是指一些假設、保證、協議或不可變性被打破時的狀態，像是當你的程式碼有無效的數值、互相矛盾的數值或缺少數值。另外還加上以下情形：</p>
 <ul>
-<li>該嚴重狀態並非平時<em>預期</em>會發生的。</li>
+<li>該嚴重狀態並非平時<strong>預期</strong>會發生的。</li>
 <li>你的程式在此時需要避免這種嚴重狀態。</li>
 <li>你所使用的型別沒有適合的方式能夠處理此嚴重狀態。</li>
 </ul>
 <p>如果有人呼叫了你的程式碼卻傳遞了不合理的數值，最好的辦法是呼叫 <code>panic!</code> 並警告使用函式庫的人他們程式碼錯誤發生的位置，好讓他們在開發時就能修正。同樣地，<code>panic!</code> 也適合用於如果你呼叫了你無法掌控的外部程式碼，然後它回傳了你無法修正的無效狀態。</p>
 <p>不過如果失敗是可預期的，回傳 <code>Result</code> 就會比呼叫 <code>panic!</code> 來得好。類似的例子有，語法分析器 （parser）收到格式錯誤的資訊，或是 HTTP 請求回傳了一個狀態，告訴你已經達到請求上限了。在這樣的案例，回傳 <code>Result</code> 代表失敗是預期有時會發生的，而且呼叫者必須決定如何處理。</p>
-<p>當你的程式碼針對數值進行運算時，你的程式需要先驗證該數值，如果數值無效的話就要恐慌。這是基於安全原則，嘗試對無效資料做運算的話可能會導致你的程式碼產生漏洞。這也是標準函式庫在你嘗試取得超出界限的記憶體存取會呼叫 <code>panic!</code> 的主要原因。嘗試取得不屬於當前資料結構的記憶體是常見的安全問題。函式通常都會訂下一些<em>合約（contracts）</em>，它們的行為只有在輸入資料符合特定要求時才帶有保障。當違反合約時恐慌是十分合理的，因為違反合約就代表這是呼叫者的錯誤，這不是你的程式碼該主動處理的錯誤。事實上，呼叫者也沒有任何合理的理由來復原這樣的錯誤。函式的合約應該要寫在函式的技術文件中解釋，尤其是違反時會恐慌的情況。</p>
-<p>然而要在你的函式寫一大堆錯誤檢查有時是很冗長且麻煩的。幸運的是你可以利用 Rust 的型別系統（以及編譯器的型別檢查）來幫你完成檢驗。如果你的函式用特定型別作為參數的話，你就可以認定你的程式邏輯是編輯器已經幫你確保你拿到的數值是有效的。舉例來說，如果你有個一型別而非 <code>Option</code> 的話，你的程式就會預期取得<em>某個值</em>而不是<em>沒拿到值</em>。你的程式就不必處理 <code>Some</code> 和 <code>None</code> 這兩個變體情形，它只會有一種情況並絕對會拿到數值。要是有人沒有傳遞任何值給你的函式會根本無法編譯，所以你的函式就不需要在執行時做檢查。另一個例子是使用非帶號整數像是 <code>u32</code> 來確保參數不會是負數。</p>
+<p>當你的程式碼針對數值進行運算時，你的程式需要先驗證該數值，如果數值無效的話就要恐慌。這是基於安全原則，嘗試對無效資料做運算的話可能會導致你的程式碼產生漏洞。這也是標準函式庫在你嘗試取得超出界限的記憶體存取會呼叫 <code>panic!</code> 的主要原因。嘗試取得不屬於當前資料結構的記憶體是常見的安全問題。函式通常都會訂下一些<strong>合約（contracts）</strong>，它們的行為只有在輸入資料符合特定要求時才帶有保障。當違反合約時恐慌是十分合理的，因為違反合約就代表這是呼叫者的錯誤，這不是你的程式碼該主動處理的錯誤。事實上，呼叫者也沒有任何合理的理由來復原這樣的錯誤。函式的合約應該要寫在函式的技術文件中解釋，尤其是違反時會恐慌的情況。</p>
+<p>然而要在你的函式寫一大堆錯誤檢查有時是很冗長且麻煩的。幸運的是你可以利用 Rust 的型別系統（以及編譯器的型別檢查）來幫你完成檢驗。如果你的函式用特定型別作為參數的話，你就可以認定你的程式邏輯是編輯器已經幫你確保你拿到的數值是有效的。舉例來說，如果你有個一型別而非 <code>Option</code> 的話，你的程式就會預期取得<strong>某個值</strong>而不是<strong>沒拿到值</strong>。你的程式就不必處理 <code>Some</code> 和 <code>None</code> 這兩個變體情形，它只會有一種情況並絕對會拿到數值。要是有人沒有傳遞任何值給你的函式會根本無法編譯，所以你的函式就不需要在執行時做檢查。另一個例子是使用非帶號整數像是 <code>u32</code> 來確保參數不會是負數。</p>
 <h3><a class="header" href="#建立自訂型別來驗證" id="建立自訂型別來驗證">建立自訂型別來驗證</a></h3>
 <p>讓我們來試著使用 Rust 的型別系統來進一步確保我們擁有有效數值，並建立自訂型別來驗證。回想一下第二章的猜謎遊戲，我們的程式碼要使用者從 1 到 100 之間猜一個數字。在開始與祕密數字做比較之前，我們從未驗證使用者輸入的值，我們只驗證了它是否為正的。在這種情況帶來的後果還不算嚴重：我們還是會顯示「太大」或「太小」。但是我們可以改善這段來引導使用者輸入有效數值，並在使用者輸入時猜了超出範圍的數字或字母時呈現不同行為。</p>
 <p>我們可以將輸入的猜測分析改成 <code>i32</code> 而非 <code>u32</code> 來允許負數，並檢查數字是否在範圍內，如以下所示：</p>
@@ -275,7 +275,7 @@ impl Guess {
 <p><span class="caption">範例 9-10：只會擁有 1 到 100 的 <code>Guess</code> 型別</span></p>
 <p>首先我們定義了一個結構體叫做 <code>Guess</code>，其欄位叫做 <code>value</code> 並會持有 <code>i32</code>。這就是數字會被儲存的地方。</p>
 <p>接著我們實作一個 <code>Guess</code> 的關聯函式叫做 <code>new</code> 來建立 <code>Guess</code> 的值。<code>new</code> 函式定義的參數叫做 <code>value</code> 並擁有型別 <code>i32</code>，且最後會回傳 <code>Guess</code>。函式 <code>new</code> 本體中的程式碼會驗證 <code>value</code> 確保它位於 1 到 100 之間。如果 <code>value</code> 沒有通過驗證，我們呼叫 <code>panic!</code> 來警告呼叫此程式碼的開發者，他們可能有需要修正的程式錯誤，因為使用超出範圍的 <code>value</code> 來建立 <code>Guess</code> 違反了 <code>Guess::new</code> 的合約。<code>Guess::new</code> 會恐慌的情況需要在公開的 API 技術文件中提及。我們會在第十四章討論如何寫出技術文件並在 API 技術文件中指出可能發生 <code>panic!</code> 的情形。如果 <code>value</code> 通過驗證的話，我們就建立一個新的 <code>Guess</code> 並將參數 <code>value</code> 賦值給 <code>value</code> 欄位，最後回傳 <code>Guess</code>。</p>
-<p>接著我們實作了個方法叫做 <code>value</code>，它會借用 <code>self</code> 且沒有任何參數，並會回傳 <code>i32</code>。這種方法有時會被稱為 <em>getter</em>，因為它的目的是從它的欄位中取得一些資料並回傳它。此公開方法是必要的，因為 <code>Guess</code> 結構體中的 <code>value</code> 欄位是私有的。將 <code>Guess</code> 結構體的 <code>value</code> 欄位設為私有是很重要的，這樣就無法直接設置 <code>value</code> ，模組外的程式碼<em>必須</em>使用 <code>Guess::new</code> 函式來建立 <code>Guess</code> 的實例，因而確保 <code>Guess</code> 不可能會有沒有經過 <code>Guess::new</code> 函式驗證的 <code>value</code>。</p>
+<p>接著我們實作了個方法叫做 <code>value</code>，它會借用 <code>self</code> 且沒有任何參數，並會回傳 <code>i32</code>。這種方法有時會被稱為 <em>getter</em>，因為它的目的是從它的欄位中取得一些資料並回傳它。此公開方法是必要的，因為 <code>Guess</code> 結構體中的 <code>value</code> 欄位是私有的。將 <code>Guess</code> 結構體的 <code>value</code> 欄位設為私有是很重要的，這樣就無法直接設置 <code>value</code> ，模組外的程式碼<strong>必須</strong>使用 <code>Guess::new</code> 函式來建立 <code>Guess</code> 的實例，因而確保 <code>Guess</code> 不可能會有沒有經過 <code>Guess::new</code> 函式驗證的 <code>value</code>。</p>
 <p>這樣當函式的參數或回傳值只能是數字 1 到 100 的話，它的簽名就能使用或回傳 <code>Guess</code> 而不是 <code>i32</code>，因此就不必在它的本體內做任何額外檢查。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
 <p>Rust 的錯誤檢查功能的設計旨在協助你寫出可靠的程式碼。<code>panic!</code> 巨集告訴你的程式遇到了它無法處理的狀態，並讓你告訴程序停止，而不是繼續嘗試使用無效或不正確的數值。<code>Result</code> 枚舉使用 Rust 的型別系統來指出可能會失敗的運算，並讓你的程式碼有辦法回復。你可以使用 <code>Result</code> 來告訴使用你的程式碼的呼叫者，他們需要處理可能成功與失敗的情形。在適當的場合使用 <code>panic!</code> 與 <code>Result</code> 能讓你的程式碼在不可避免的問題中更加可靠。</p>
