--- a/ch13-04-performance.html
+++ b/ch13-04-performance.html
@@ -178,7 +178,7 @@
 test bench_search_iter ... bench:  19,234,900 ns/iter (+/- 657,200)
 </code></pre>
 <p>疊代器版本竟然比較快一些！我們在此不會解釋評測的程式碼，因為這裡的重點不再於證明這兩種版本是一樣快的，而是要理解這兩種實作對效能的影響。</p>
-<p>要做更全面的評測的話，你應該要檢查使用不同大小的不同文字來作為 <code>contents</code>、不同單字與不同長度來作為 <code>query</code>，以及所有各式各樣的可能性。這邊的重點在於：疊代器雖然是高階抽象，但其編譯出來的程式碼與你親自寫出低階的程式碼幾乎相同。疊代器是 Rust 其中一種<em>零成本抽象（zero-cost abstractions）</em> ，這指的是使用的抽象不會在執行時有額外的開銷。這是 C++ 的初始設計暨實作者 Bjarne Stroustrup 在 <em>Foundations of C++” (2012) 書中所定義的</em>零開銷（zero-overhead）* 的概念：</p>
+<p>要做更全面的評測的話，你應該要檢查使用不同大小的不同文字來作為 <code>contents</code>、不同單字與不同長度來作為 <code>query</code>，以及所有各式各樣的可能性。這邊的重點在於：疊代器雖然是高階抽象，但其編譯出來的程式碼與你親自寫出低階的程式碼幾乎相同。疊代器是 Rust 其中一種<strong>零成本抽象</strong>（zero-cost abstractions），這指的是使用的抽象不會在執行時有額外的開銷。這是 C++ 的初始設計暨實作者 Bjarne Stroustrup 在 “Foundations of C++” (2012) 書中所定義的<strong>零開銷</strong>（zero-overhead）的概念：</p>
 <blockquote>
 <p>大致上來說，C++ 的實作遵守著零開銷的原則：你沒有使用到的話，你就不必買單。而且你有使用到的話，你不可能在寫出更好的程式碼。</p>
 </blockquote>
@@ -197,7 +197,7 @@ for i in 12..buffer.len() {
 }
 </code></pre>
 <p>要計算 <code>prediction</code> 的數值的話，此程式碼會遍歷 <code>coefficients</code> 的 12 個數值並使用 <code>zip</code> 方法將係數數值與 <code>buffer</code> 中之前 12 個數值做配對。然後在每個配對中，我們將數值相乘，然後相加所有結果，最後對總和往右偏移 <code>qlp_shift</code> 位。</p>
-<p>像音訊解碼器這種的應用程式運算通常最注重效率。我們在此建立了一個疊代器，使用兩個配接器，然後消化數值。這段 Rust 程式碼會產生什麼樣的組合語言程式碼呢？在本書撰寫時，它會編譯出與你自己手寫一樣的組合語言。遍歷 <code>coefficients</code> 的數值完全不需用到迴圈：Rust 知道一共有 12 次疊代，所以它會「展開（unroll）」迴圈。<em>展開</em>是一種優化方式，這會移除迴圈控制程式碼並改產生針對迴圈中每次疊代的重複程式碼。</p>
+<p>像音訊解碼器這種的應用程式運算通常最注重效率。我們在此建立了一個疊代器，使用兩個配接器，然後消化數值。這段 Rust 程式碼會產生什麼樣的組合語言程式碼呢？在本書撰寫時，它會編譯出與你自己手寫一樣的組合語言。遍歷 <code>coefficients</code> 的數值完全不需用到迴圈：Rust 知道一共有 12 次疊代，所以它會「展開（unroll）」迴圈。<strong>展開</strong>是一種優化方式，這會移除迴圈控制程式碼並改產生針對迴圈中每次疊代的重複程式碼。</p>
 <p>所有的係數都會存在暫存器中，這意味著存取數值會非常地快。在執行時不會有對陣列的界限檢查。這些所有 Rust 能做的優化讓產生的程式碼可以十分迅速。現在既然你已經知道了，你就可以自在地使用疊代器與閉包！它們可以寫出高階的程式碼，但不會犧牲執行時的效能。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
 <p>閉包與疊代是是 Rust 啟發自函式程式語言的概念。它們讓 Rust 在表達高階概念的同時，仍能擁有低階程式碼的效能。閉包與疊代器的實作對執行時效能不會有影響。這是 Rust 竭力提供零成本抽象的目標之一。</p>
