--- a/ch17-03-oo-design-patterns.html
+++ b/ch17-03-oo-design-patterns.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#實作物件導向設計模式" id="實作物件導向設計模式">實作物件導向設計模式</a></h2>
-<p><em>狀態模式（state pattern）</em> 是種物件導向設計模式。此模式的關鍵在於一個數值會有些內部狀態，會以<em>狀態物件（state objects）</em> 呈現，然後數值的行為會依據內部狀態而有所改變。狀態物件會分享功能，當然在 Rust 中我們使用結構體與特徵，而不是使用物件與繼承。每個狀態物件負責本身的行為並監測何時要改變成其他狀態。持有狀態物件的數值不會知道狀態中不同的行為，或是何時要轉換狀態。</p>
+<p><strong>狀態模式</strong>（state pattern）是種物件導向設計模式。此模式的關鍵在於一個數值會有些內部狀態，會以<strong>狀態物件</strong>（state objects）呈現，然後數值的行為會依據內部狀態而有所改變。狀態物件會分享功能，當然在 Rust 中我們使用結構體與特徵，而不是使用物件與繼承。每個狀態物件負責本身的行為並監測何時要改變成其他狀態。持有狀態物件的數值不會知道狀態中不同的行為，或是何時要轉換狀態。</p>
 <p>使用狀態模式表示當我們程式的業務需求改變時，我們不需要改變持有狀態的數值或使用其數值的程式碼。我們只需要變更其中一個狀態物件的程式碼來改變其規則，或者新增更多狀態物件。讓我們看看狀態設計模式的範例，以及如何在 Rust 中使用。</p>
 <p>我們會漸進式地實作一個網誌文章工作流程。網誌最終的功能會長得像這樣：</p>
 <ol>
