--- a/ch04-01-what-is-ownership.html
+++ b/ch04-01-what-is-ownership.html
@@ -172,15 +172,15 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#什麼是所有權" id="什麼是所有權">什麼是所有權？</a></h2>
-<p>Rust 的核心特色就是<em>所有權</em>。雖然這項特色很容易解釋，但它卻深深影響整個語言的其他部分。</p>
+<p>Rust 的核心特色就是<strong>所有權</strong>。雖然這項特色很容易解釋，但它卻深深影響整個語言的其他部分。</p>
 <p>所有程式都需要在執行時管理它們使用記憶體的方式。有些語言會用垃圾回收機制，在程式執行時不斷尋找不再使用的記憶體；而有些程式，開發者必須親自分配和釋放記憶體。Rust 選擇了第三種方式：記憶體由所有權系統管理，且編譯器會在編譯時加上一些規則檢查。所有權的特性不會降低執行程式的速度。</p>
 <p>因為所有權對許多程式設計師來說是個全新的觀念，所以的確需要花一點時間消化。好消息是隨著你越熟悉 Rust 與所有權系統的規則，你越能本能地開發出安全又高效的程式碼。加油，堅持下去！</p>
 <p>當你理解所有權時，你就有一個穩健的基礎能夠理解那些使 Rust 獨特的功能。在本章節中，你將透過一些範例來學習所有權，我們會專注在一個非常常見的資料結構：字串。</p>
 <blockquote>
 <h3><a class="header" href="#堆疊stack與堆積heap" id="堆疊stack與堆積heap">堆疊（Stack）與堆積（Heap）</a></h3>
 <p>在許多程式語言中，你通常不需要去想到堆疊與堆積。但在像是 Rust 這樣的系統程式語言，資料是位於堆疊還是堆積就會有差，這會影響語言的行為也是你得作出某些特定決策的理由。在本章稍後討論所有權時，都會談到堆疊與堆積的關聯，所以這裡預先稍作解釋。</p>
-<p>堆疊與堆積都是提供程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱為<em>後進先出</em>（<em>last in, first out</em>）。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼為<em>推入堆疊</em>（<em>pushing onto the stack</em>），而移除資料則是叫做<em>彈出堆疊</em>（<em>popping off the stack</em>）。</p>
-<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記為已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的位址。這樣的過程稱為<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱為<em>分配（allocating）</em> 就好。將數值放入堆疊不會被視為是在分配。因為指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
+<p>堆疊與堆積都是提供程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱為<strong>後進先出（last in, first out）</strong>。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼為<strong>推入堆疊（pushing onto the stack）</strong>，而移除資料則是叫做<strong>彈出堆疊（popping off the stack）</strong>。</p>
+<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記為已佔用，然後回傳一個<strong>指標（pointer）</strong>，指著該位置的位址。這樣的過程稱為<strong>在堆積上分配（allocating on the heap）</strong>，或者有時直接簡稱為<strong>分配</strong>（allocating）就好。將數值放入堆疊不會被視為是在分配。因為指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
 <p>你可以想像成是一個餐廳。當你進入餐廳時，你會告訴服務員你的團體有多少人，他就會將你們帶到足夠人數的餐桌。如果你的團體有人晚到的話，他們可以直接尋問你坐在哪而找到你。</p>
 <p>將資料推入堆疊會比在堆積上分配還來的快，因為分配器不需要去搜尋哪邊才能存入新資料，其位置永遠在堆疊最上方。相對的，堆積就需要比較多步驟，分配器必須先找到一個夠大的空位來儲存資料，然後作下紀錄為下次分配做準備。</p>
 <p>在堆積上取得資料也比在堆疊上取得來得慢，因為你需要用追蹤指標才找的到。現代的處理器如果在記憶體間跳轉越少的話速度就越快。讓我們繼續用餐廳做比喻，想像伺服器就是在餐廳為數個餐桌點餐。最有效率的點餐方式就是依照餐桌順序輪流點餐。如果幫餐桌 A 點了餐之後跑到餐桌 B 點，又跑回到 A 然後又跑到 B 的話，可以想像這是個浪費時間的過程。同樣的道理，處理器在處理任務時，如果處理的資料相鄰很近（就如同存在堆疊）的話，當然比相鄰很遠（如同存在堆積）來得快。要在堆積分配大量的空間同樣也很花時間。</p>
@@ -190,20 +190,20 @@
 <h3><a class="header" href="#所有權規則" id="所有權規則">所有權規則</a></h3>
 <p>首先，讓我們先看看所有權規則。當我們在解釋說明時，請記得這些規則：</p>
 <ul>
-<li>Rust 中每個數值都會有一個變數作為它的<em>擁有者</em>（<em>owner</em>）。</li>
+<li>Rust 中每個數值都會有一個變數作為它的<strong>擁有者（owner）</strong>。</li>
 <li>同時間只能有一個擁有者。</li>
 <li>當擁有者離開作用域時，數值就會被丟棄。</li>
 </ul>
 <h3><a class="header" href="#變數作用域" id="變數作用域">變數作用域</a></h3>
 <p>我們已經在第二章示範了一支 Rust 的程式。現在既然我們已經知道了基本語法，我們接下來就不再將 <code>fn main() {</code> 寫進程式碼範例範例中。所以你在參考時，請記得親自寫在 <code>main</code> 函式內。這樣一來，我們的範例可以更加簡潔，讓我們更加專注在細節而非樣板程式。</p>
-<p>作為所有權的第一個範例，我們先來看變數的<em>作用域</em>（<em>scope</em>）。作用域是一些項目在程式內的有效範圍。假設我們有個像這樣的變數：</p>
+<p>作為所有權的第一個範例，我們先來看變數的<strong>作用域（scope）</strong>。作用域是一些項目在程式內的有效範圍。假設我們有個像這樣的變數：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>let s = &quot;hello&quot;;
 <span class="boring">}
 </span></code></pre></pre>
-<p>變數 <code>s</code> 是一個字串字面值（string literal），而字串數值是寫死在我們程式內。此變數的有效範圍是從它宣告開始一直到當前<em>作用域</em>結束為止。範例 4-1 註解了 <code>s</code> 在哪裡是有效的。</p>
+<p>變數 <code>s</code> 是一個字串字面值（string literal），而字串數值是寫死在我們程式內。此變數的有效範圍是從它宣告開始一直到當前<strong>作用域</strong>結束為止。範例 4-1 註解了 <code>s</code> 在哪裡是有效的。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    {                      // s 在此處無效，因為它還沒宣告
         let s = &quot;hello&quot;;   // s 在此開始視為有效
@@ -215,8 +215,8 @@
 <p><span class="caption">範例 4-1：變數與它在作用域的有效範圍</span></p>
 <p>換句話說，這裡有兩個重要的時間點：</p>
 <ul>
-<li>當 <code>s</code> <em>進入作用域</em>時，它是有效的。</li>
-<li>它持續被視為有效直到它<em>離開作用域</em>為止。</li>
+<li>當 <code>s</code> <strong>進入作用域</strong>時，它是有效的。</li>
+<li>它持續被視為有效直到它<strong>離開作用域</strong>為止。</li>
 </ul>
 <p>目前為止，變數何時有效與作用域的關係都還跟其他程式語言相似。現在我們要以此基礎來介紹 <code>String</code> 型別</p>
 <h3><a class="header" href="#string-型別" id="string-型別"><code>String</code> 型別</a></h3>
@@ -230,7 +230,7 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p>雙冒號（<code>::</code>）讓我們可以將 <code>from</code> 函式置於 <code>String</code> 型別的命名空間（namespace）底下，而不是取像是 <code>string_from</code> 這樣的名稱。我們將會在第五章的<a href="ch05-03-method-syntax.html#method-syntax">「方法語法」</a><!-- ignore -->討論這個語法，並在第七章的<a href="ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html">「引用模組項目的路徑」</a><!-- ignore -->討論模組（modules）與命名空間。</p>
-<p>這種類型的字串是<em>可以</em>被改變的：</p>
+<p>這種類型的字串是<strong>可以</strong>被改變的：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
 
@@ -248,7 +248,7 @@
 <li>我們不再需要這個 <code>String</code> 時，我們需要以某種方法將此記憶體還給分配器。</li>
 </ul>
 <p>當我們呼叫 <code>String::from</code> 時就等於完成第一個部分，它的實作會請求分配一塊它需要的記憶體。這邊大概和其他程式語言都一樣。</p>
-<p>不過第二部分就不同了。在擁有<em>垃圾回收機制</em>（<em>garbage collector, GC</em>）的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
+<p>不過第二部分就不同了。在擁有<strong>垃圾回收機制</strong>（garbage collector, GC）的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
 <p>Rust 選擇了一條不同的道路：當記憶體在擁有它的變數離開作用域時就會自動釋放。以下是我們解釋作用域的範例 4-1，但使用的是 <code>String</code> 而不是原本的字串字面值：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    {
@@ -261,7 +261,7 @@
 </span></code></pre></pre>
 <p>當 <code>s</code> 離開作用域時，我們就可以很自然地將 <code>String</code> 所需要的記憶體釋放回分配器。 當變數離開作用域時，Rust 會幫我們呼叫一個特殊函式。此函式叫做 <code>drop</code>，在這裡當時 <code>String</code> 的作者就可以寫入釋放記憶體的程式碼。Rust 會在大括號結束時自動呼叫 <code>drop</code>。</p>
 <blockquote>
-<p>注意：在 C++，這樣在項目生命週期結束時釋放資源的模式，有時被稱為<em>資源取得即初始化</em>（<em>Resource Acquisition Is Initialization, RAII</em>）。如果你已經用過 RAII 的模式，那麼你應該就會很熟悉 Rust 的 <code>drop</code> 函式。</p>
+<p>注意：在 C++，這樣在項目生命週期結束時釋放資源的模式，有時被稱為<strong>資源取得即初始化（Resource Acquisition Is Initialization, RAII）</strong>。如果你已經用過 RAII 的模式，那麼你應該就會很熟悉 Rust 的 <code>drop</code> 函式。</p>
 </blockquote>
 <p>這樣的模式對於 Rust 程式碼的編寫有很深遠的影響。雖然現在這樣看起來很簡單，但在更多複雜的情況下程式碼的行為可能會變得很難預測。像是當我們需要許多變數，所以得在堆積上分配它們的情況。現在就讓我們開始來探討這些情形。</p>
 <h4><a class="header" href="#變數與資料互動的方式移動move" id="變數與資料互動的方式移動move">變數與資料互動的方式：移動（Move）</a></h4>
@@ -287,10 +287,10 @@
 <p>當我們將 <code>s1</code> 賦值給 <code>s2</code>，<code>String</code> 的資料會被拷貝，不過我們拷貝的是堆疊上的指標、長度和容量。我們不會拷貝指標指向的堆積資料。資料以記憶體結構表示的方式會如圖示 4-2 表示。</p>
 <img alt="s1 and s2 pointing to the same value" src="img/trpl04-02.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-2：<code>s2</code> 擁有一份 <code>s1</code> 的指標、長度和容量的記憶體結構</span></p>
-<p>所以實際上的結構<em>不會</em>長的像圖示 4-3 這樣，如果 Rust 也會拷貝堆積資料的話，才會看起來像這樣。如果 Rust 這麼做的話，<code>s2 = s1</code> 的動作花費會變得非常昂貴。當堆積上的資料非常龐大時，對執行時的性能影響是非常顯著的。</p>
+<p>所以實際上的結構<strong>不會</strong>長的像圖示 4-3 這樣，如果 Rust 也會拷貝堆積資料的話，才會看起來像這樣。如果 Rust 這麼做的話，<code>s2 = s1</code> 的動作花費會變得非常昂貴。當堆積上的資料非常龐大時，對執行時的性能影響是非常顯著的。</p>
 <img alt="s1 and s2 to two places" src="img/trpl04-03.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-3：如果 Rust 也會拷貝堆積資料，<code>s2 = s1</code> 可能會長得樣子</span></p>
-<p>稍早我們提到當變數離開作用域時，Rust 會自動呼叫 <code>drop</code> 函式並清理該變數在堆積上的資料。但圖示 4-2 顯式兩個資料指標都指向相同位置，這會造成一個問題。當 <code>s2</code> 與 <code>s1</code> 都離開作用域時，它們都會嘗試釋放相同的記憶體。這被稱呼為<em>雙重釋放（double free）</em> 錯誤，也是我們之前提過的錯誤之一。釋放記憶體兩次可能會導致記憶體損壞，進而造成安全漏洞。</p>
+<p>稍早我們提到當變數離開作用域時，Rust 會自動呼叫 <code>drop</code> 函式並清理該變數在堆積上的資料。但圖示 4-2 顯式兩個資料指標都指向相同位置，這會造成一個問題。當 <code>s2</code> 與 <code>s1</code> 都離開作用域時，它們都會嘗試釋放相同的記憶體。這被稱呼為<strong>雙重釋放</strong>（double free）錯誤，也是我們之前提過的錯誤之一。釋放記憶體兩次可能會導致記憶體損壞，進而造成安全漏洞。</p>
 <p>為了保障記憶體安全，在此情況中 Rust 還會在做一件重要的事。與其嘗試拷貝分配的記憶體，Rust 會將 <code>s1</code> 視為無效。因此當 <code>s1</code> 離開作用域時，Rust 不需要釋放任何東西。請看看如果在 <code>s2</code> 建立之後繼續使用 <code>s1</code> 會發生什麼事，以下程式就執行不了：</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let s1 = String::from(&quot;hello&quot;);
@@ -320,13 +320,13 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>如果你在其他語言聽過<em>淺拷貝</em>（<em>shallow copy</em>） 和 <em>深拷貝</em>（<em>deep copy</em>） 這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因為 Rust 同時又無效化第一個變數，我們不會叫此為淺拷貝，而是稱此動作為<em>移動</em>（<em>move</em>）。在此範例我們會稱 <code>s1</code> <em>被移動</em> 到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
+<p>如果你在其他語言聽過<strong>淺拷貝（shallow copy）<strong>和</strong>深拷貝（deep copy）<strong>這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因為 Rust 同時又無效化第一個變數，我們不會叫此為淺拷貝，而是稱此動作為</strong>移動（move）</strong>。在此範例我們會稱 <code>s1</code> <strong>被移動</strong>到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
 <img alt="s1 moved to s2" src="img/trpl04-04.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-4：<code>s1</code> 無效後的記憶體結構</span></p>
 <p>這樣就解決了問題！只有 <code>s2</code> 有效的話，當它離開作用域，就只有它會釋放記憶體，我們就完成所有動作了。</p>
-<p>除此之外，這邊還表達了另一個設計決策：Rust 永遠不會自動將你的資料建立「深拷貝」。因此任何<em>自動</em>的拷貝動作都可以被視為是對執行效能影響很小的。</p>
+<p>除此之外，這邊還表達了另一個設計決策：Rust 永遠不會自動將你的資料建立「深拷貝」。因此任何<strong>自動</strong>的拷貝動作都可以被視為是對執行效能影響很小的。</p>
 <h4><a class="header" href="#變數與資料互動的方式克隆clone" id="變數與資料互動的方式克隆clone">變數與資料互動的方式：克隆（Clone）</a></h4>
-<p>要是我們<em>真的想</em>深拷貝 <code>String</code> 在堆積上的資料而非僅是堆疊資料的話，我們可以使用一個常見的方法（method）叫做 <code>clone</code>。我們會在第五章講解方法語法，不過既然方法是很常見的程式語言功能，你很可能已經有些概念了。</p>
+<p>要是我們<strong>真的想</strong>深拷貝 <code>String</code> 在堆積上的資料而非僅是堆疊資料的話，我們可以使用一個常見的方法（method）叫做 <code>clone</code>。我們會在第五章講解方法語法，不過既然方法是很常見的程式語言功能，你很可能已經有些概念了。</p>
 <p>以下是 <code>clone</code> 方法運作的範例：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let s1 = String::from(&quot;hello&quot;);
@@ -335,7 +335,7 @@ To learn more, run the command again with --verbose.
     println!(&quot;s1 = {}, s2 = {}&quot;, s1, s2);
 <span class="boring">}
 </span></code></pre></pre>
-<p>此程式碼能執行無誤，並明確作出了像圖示 4-3 這樣的行為，也就是堆積資料<em>的確</em>被複製了一份。</p>
+<p>此程式碼能執行無誤，並明確作出了像圖示 4-3 這樣的行為，也就是堆積資料<strong>的確</strong>被複製了一份。</p>
 <p>當你看到 <code>clone</code> 的呼叫，你就會知道有一些特定的程式碼被執行且消費可能是相對昂貴的。你可以很清楚地知道有些不同的行為正在發生。</p>
 <h4><a class="header" href="#只在堆疊上的資料拷貝copy" id="只在堆疊上的資料拷貝copy">只在堆疊上的資料：拷貝（Copy）</a></h4>
 <p>還有一個小細節我們還沒提到，也就是我們在使用整數時的程式碼。回想一下範例 4-2 是這樣寫的，它能執行而且是有效的：</p>
@@ -434,7 +434,7 @@ fn calculate_length(s: String) -&gt; (String, usize) {
 }
 </code></pre></pre>
 <p><span class="caption">範例 4-5：回傳參數的所有權</span></p>
-<p>但這實在太繁瑣，而且這樣的情況是很常見的。幸運的是 Rust 有提供一個概念叫做<em>引用（references）</em>。</p>
+<p>但這實在太繁瑣，而且這樣的情況是很常見的。幸運的是 Rust 有提供一個概念叫做<strong>引用（references）</strong>。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
