--- a/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
+++ b/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
@@ -289,7 +289,7 @@ fn function2() -&gt; IoResult&lt;()&gt; {
 <p><span class="caption">範例 7-16：使用 <code>as</code> 將型別引入作用域的同時重新命名</span></p>
 <p>在第二個 <code>use</code> 陳述式，我們選擇了將 <code>std::io::Result</code> 型別重新命名為 <code>IoResult</code>，這樣就不會和同樣引入作用域內 <code>std::fmt</code> 的 <code>Result</code> 有所衝突。範例 7-15 與 範例 7-16 都屬於習慣用法，你可以選擇你比較喜歡的方式！</p>
 <h3><a class="header" href="#使用-pub-use-重新匯出名稱" id="使用-pub-use-重新匯出名稱">使用 <code>pub use</code> 重新匯出名稱</a></h3>
-<p>當我們使用 <code>use</code> 關鍵字將名稱引入作用域時，該有效名稱在新的作用域中是私有的。要是我們希望呼叫我們這段程式碼時，也可以使用這個名稱的話（就像該名稱是在此作用域內定義的），我們可以組合 <code>pub</code> 和 <code>use</code>。這樣的技巧稱之為<em>重新匯出（re-exporting）</em>，因為我們將項目引入作用域，並同時公開給其他作用域引用。</p>
+<p>當我們使用 <code>use</code> 關鍵字將名稱引入作用域時，該有效名稱在新的作用域中是私有的。要是我們希望呼叫我們這段程式碼時，也可以使用這個名稱的話（就像該名稱是在此作用域內定義的），我們可以組合 <code>pub</code> 和 <code>use</code>。這樣的技巧稱之為<strong>重新匯出（re-exporting）</strong>，因為我們將項目引入作用域，並同時公開給其他作用域引用。</p>
 <p>範例 7-17 將範例 7-11 在源頭模組中原本的 <code>use</code> 改成 <code>pub use</code>。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">mod front_of_house {
@@ -443,7 +443,7 @@ use std::io::Write;
 <p><span class="caption">範例 7-20：組合範例 7-19 的路徑為一個 <code>use</code> 陳述式</span></p>
 <p>此行就會將 <code>std::io</code> 和 <code>std::io::Write</code> 引入作用域。</p>
 <h3><a class="header" href="#全域運算子" id="全域運算子">全域運算子</a></h3>
-<p>如果我們想要將在一個路徑中所定義的<em>所有</em>公開項目引入作用域的話，我們可以在指明路徑之後加上全域（glob）運算子 <code>*</code>：</p>
+<p>如果我們想要將在一個路徑中所定義的<strong>所有</strong>公開項目引入作用域的話，我們可以在指明路徑之後加上全域（glob）運算子 <code>*</code>：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
