--- a/ch08-03-hash-maps.html
+++ b/ch08-03-hash-maps.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#透過雜湊映射儲存鍵值配對" id="透過雜湊映射儲存鍵值配對">透過雜湊映射儲存鍵值配對</a></h2>
-<p>我們最後一個常見的集合是<em>雜湊映射（hash map）</em>，<code>HashMap&lt;K, V&gt;</code> 型別會儲存一個鍵（key）型別 <code>K</code> 對應到一個數值（value）型別 <code>V</code>。它透過<em>雜湊函式（hashing function）</em> 來決定要將這些鍵與值放在記憶體何處。許多程式語言都有支援這種類型的資料結構，不過通常它們會提供不同的名稱，像是 hash、map、object、hash table、dictionary 或 associative array 等等。</p>
+<p>我們最後一個常見的集合是<strong>雜湊映射（hash map）</strong>，<code>HashMap&lt;K, V&gt;</code> 型別會儲存一個鍵（key）型別 <code>K</code> 對應到一個數值（value）型別 <code>V</code>。它透過<strong>雜湊函式</strong>（hashing function）來決定要將這些鍵與值放在記憶體何處。許多程式語言都有支援這種類型的資料結構，不過通常它們會提供不同的名稱，像是 hash、map、object、hash table、dictionary 或 associative array 等等。</p>
 <p>雜湊映射適合用於當你不想像向量那樣用索引搜尋資料，而是透過一個可以為任意型別的鍵來搜尋的情況。舉例來說，在比賽中我們可以使用雜湊映射來儲存每隊的分數，每個鍵代表隊伍名稱，而每個值代表隊伍分數。給予一個隊伍名稱，你就能取得該隊伍分數。</p>
 <p>我們會在此段落介紹雜湊映射的基本 API，但還有很多實用的函式定義在標準函式庫的 <code>HashMap&lt;K, V&gt;</code> 中，所以別忘了查閱標準函式庫的技術文件來瞭解更多資訊。</p>
 <h3><a class="header" href="#建立新的雜湊映射" id="建立新的雜湊映射">建立新的雜湊映射</a></h3>
@@ -254,7 +254,7 @@
 藍隊: 10
 </code></pre>
 <h3><a class="header" href="#更新雜湊映射" id="更新雜湊映射">更新雜湊映射</a></h3>
-<p>雖然鍵值配對的數量可以增加，但每個鍵同一時間就只能有一個對應的值而已。當你想要改變雜湊映射的資料的話，你必須決定如何處理當一個鍵已經有一個值的情況。你可以不管舊的值，直接用新值取代。你也可以保留舊值、忽略新值，只有在該鍵<em>尚未</em>擁有對應數值時才賦值給它。或者你也可以將舊值與新值組合起來。讓我們看看分別怎麼處理吧！</p>
+<p>雖然鍵值配對的數量可以增加，但每個鍵同一時間就只能有一個對應的值而已。當你想要改變雜湊映射的資料的話，你必須決定如何處理當一個鍵已經有一個值的情況。你可以不管舊的值，直接用新值取代。你也可以保留舊值、忽略新值，只有在該鍵<strong>尚未</strong>擁有對應數值時才賦值給它。或者你也可以將舊值與新值組合起來。讓我們看看分別怎麼處理吧！</p>
 <h4><a class="header" href="#覆蓋數值" id="覆蓋數值">覆蓋數值</a></h4>
 <p>如果我們在雜湊映射插入一個鍵值配對，然後又在相同鍵插入不同的數值的話，該鍵相對應的數值就會被取代。如範例 8-24 雖然我們呼叫了兩次 <code>insert</code>，但是雜湊映射只會保留一個鍵值配對，因為我們向藍隊的鍵插入了兩次數值。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
