--- a/ch10-00-generics.html
+++ b/ch10-00-generics.html
@@ -172,11 +172,11 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#泛型型別特徵與生命週期" id="泛型型別特徵與生命週期">泛型型別、特徵與生命週期</a></h1>
-<p>每個程式語言都有能夠高效處理概念複製的工具。在 Rust 此工具就是<em>泛型（generics）</em>。泛型是實際型別或其他屬性的抽象替代。當我們在寫程式碼時，我們可以表達泛型的行為，或是它們與其他泛型有何關聯，而不必在編譯與執行程式時知道它們實際上是什麼。</p>
+<p>每個程式語言都有能夠高效處理概念複製的工具。在 Rust 此工具就是<strong>泛型（generics）</strong>。泛型是實際型別或其他屬性的抽象替代。當我們在寫程式碼時，我們可以表達泛型的行為，或是它們與其他泛型有何關聯，而不必在編譯與執行程式時知道它們實際上是什麼。</p>
 <p>類似於函式有辦法能接收多種未知數值作為參數來執行相同程式碼，函式也可以接受一些泛型型別參數，而不是實際型別像是 <code>i32</code> 或 <code>String</code>。事實上我們已經在第六章的 <code>Option&lt;T&gt;</code>、第八章的 <code>Vec&lt;T&gt;</code> 和 <code>HashMap&lt;K, V&gt;</code> 以及第九章的 <code>Result&lt;T, E&gt;</code> 使用過泛型了。在本章節，你將會探索如何用泛型定義你自己的型別、函式與方法！</p>
 <p>首先我們會先檢視如何提取參數來減少重複的程式碼。接著我們會以相同的技巧使用泛型將兩個只有參數型別不同的函式轉變成泛型函式。我們還會解釋如何在結構體和枚舉使用泛型型別。</p>
-<p>再來你會學會如何使用<em>特徵（traits）</em> 來定義共同行為。你可以組合特徵與泛型型別來限制泛型型別只適用在有特定行為的型別，而不是任意型別。</p>
-<p>最後我們會來介紹<em>生命週期（lifetimes）</em>，一種能讓編譯器知道引用如何互相關聯的泛型。生命週期讓我們能在許多情況下借用數值，同時能確保編譯器會檢查這些引用是有效的。</p>
+<p>再來你會學會如何使用<strong>特徵</strong>（traits）來定義共同行為。你可以組合特徵與泛型型別來限制泛型型別只適用在有特定行為的型別，而不是任意型別。</p>
+<p>最後我們會來介紹<strong>生命週期（lifetimes）</strong>，一種能讓編譯器知道引用如何互相關聯的泛型。生命週期讓我們能在許多情況下借用數值，同時能確保編譯器會檢查這些引用是有效的。</p>
 <h2><a class="header" href="#提取函數來減少重複性" id="提取函數來減少重複性">提取函數來減少重複性</a></h2>
 <p>在我們深入泛型語法之前，讓我們先來看如何不用泛型型別的情況下，用提取函式的方式減少重複的程式碼。之後我們就會用此方式來提取泛型函式！和你透過找出重複的程式碼來提取程式一樣，你也將找出重複的函式來轉成泛型。</p>
 <p>讓我們考慮一支尋找列表中最大數字的小程式，如範例 10-1 所示。</p>
@@ -226,7 +226,7 @@
     println!(&quot;最大數字為 {}&quot;, largest);
 }
 </code></pre></pre>
-<p><span class="caption">範例 10-2：在<em>兩個</em>數字列表中尋找最大值</span></p>
+<p><span class="caption">範例 10-2：在<strong>兩個</strong>數字列表中尋找最大值</span></p>
 <p>雖然這樣的程式碼能執行，寫出重複的程式碼很囉唆而且容易出錯。我們可以每次變更此程式碼時就得更新程式碼中許多地方。</p>
 <p>要去除重複的部分，我們可以建立一層抽象，定義一個可以處理任意整數列表作為參數的函式。這樣的解決辦法讓我們的程式更清晰，而且讓我們能抽象表達出從列表中尋找最大值這樣的概念。</p>
 <p>在範例 10-3 我們提取了尋找最大值的程式碼成一個函式叫做 <code>largest</code>。不像範例 10-1 只能從特定列表尋找最大值，此程式可以從兩個不同的列表尋找最大值。</p>
