--- a/ch10-01-syntax.html
+++ b/ch10-01-syntax.html
@@ -269,7 +269,7 @@ error: could not compile `chapter10`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>註釋中提到了 <code>std::cmp::PartialOrd</code> 這個<em>特徵（trait）</em>。我們會在下個段落來討論特徵。現在此錯誤告訴我們 <code>largest</code> 本體無法適用於所有可能的 <code>T</code> 型別，因為我們想要在本體中比較型別 <code>T</code> 的數值，我們只能在能夠排序的型別中做比較。要能夠比較的話，標準函式庫有提供 <code>std::cmp::PartialOrd</code> 特徵讓你可以針對你的型別來實作（請查閱附錄 C 來瞭解更多此特徵的細節）。你會在<a href="ch10-02-traits.html#%E7%89%B9%E5%BE%B5%E4%BD%9C%E7%82%BA%E5%8F%83%E6%95%B8">「特徵作為參數」</a><!-- ignore -->的段落學習到如何指定特定泛型型別擁有特定特徵。不過先讓先我們探索其他泛型型別參數使用的方式。</p>
+<p>註釋中提到了 <code>std::cmp::PartialOrd</code> 這個<strong>特徵（trait）</strong>。我們會在下個段落來討論特徵。現在此錯誤告訴我們 <code>largest</code> 本體無法適用於所有可能的 <code>T</code> 型別，因為我們想要在本體中比較型別 <code>T</code> 的數值，我們只能在能夠排序的型別中做比較。要能夠比較的話，標準函式庫有提供 <code>std::cmp::PartialOrd</code> 特徵讓你可以針對你的型別來實作（請查閱附錄 C 來瞭解更多此特徵的細節）。你會在<a href="ch10-02-traits.html#%E7%89%B9%E5%BE%B5%E4%BD%9C%E7%82%BA%E5%8F%83%E6%95%B8">「特徵作為參數」</a><!-- ignore -->的段落學習到如何指定特定泛型型別擁有特定特徵。不過先讓先我們探索其他泛型型別參數使用的方式。</p>
 <h3><a class="header" href="#在結構體中定義" id="在結構體中定義">在結構體中定義</a></h3>
 <p>我們一樣能以 <code>&lt;&gt;</code> 語法來對結構體中一或多個欄位使用泛型型別參數。範例 10-6 顯示了如何定義 <code>Point&lt;T&gt;</code> 結構體並讓 <code>x</code> 與 <code>y</code> 可以是任意型別數值。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -285,7 +285,7 @@ fn main() {
 </code></pre></pre>
 <p><span class="caption">範例 10-6：<code>Point&lt;T&gt;</code> 結構體的 <code>x</code> 與 <code>y</code> 會有型別 <code>T</code> 的數值</span></p>
 <p>在結構體定義使用泛型的語法與函式定義類似。首先，我們在結構體名稱後方加上尖括號，並在其內宣告型別參數名稱。接著我們能在原本指定實際資料型別的地方，使用泛型型別來定義結構體。</p>
-<p>注意到我們使用了一個泛型型別來定義 <code>Point&lt;T&gt;</code>，此定義代表 <code>Point&lt;T&gt;</code> 是某型別 <code>T</code> 下之通用的，而且欄位 <code>x</code> 與 <code>y</code> 擁有<em>相同</em>型別，無論最終是何種型別。如果我們用不同的型別數值來建立 <code>Point&lt;T&gt;</code> 實例，我們的程式碼會無法編譯，如範例 10-7 所示。</p>
+<p>注意到我們使用了一個泛型型別來定義 <code>Point&lt;T&gt;</code>，此定義代表 <code>Point&lt;T&gt;</code> 是某型別 <code>T</code> 下之通用的，而且欄位 <code>x</code> 與 <code>y</code> 擁有<strong>相同</strong>型別，無論最終是何種型別。如果我們用不同的型別數值來建立 <code>Point&lt;T&gt;</code> 實例，我們的程式碼會無法編譯，如範例 10-7 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">struct Point&lt;T&gt; {
     x: T,
@@ -432,7 +432,7 @@ fn main() {
 <p>此例是是為了展示一些泛型參數是透過 <code>impl</code> 宣告而有些則是透過方法定義來得。在此，泛型參數 <code>T</code> 和 <code>U</code> 是宣告在 <code>impl</code> 之後，因為它們與結構體定義有關聯。而在 <code>fn mixup</code> 之後宣告的泛型參數只和該方法有關。</p>
 <h3><a class="header" href="#使用泛型的程式碼效能" id="使用泛型的程式碼效能">使用泛型的程式碼效能</a></h3>
 <p>你可能會好奇當你使用泛型型別參數會不會有執行時的消耗。好消息是 Rust 實作泛型的方式讓你使用泛型的的程式碼跑得不會比使用實際型別還來的慢。</p>
-<p>Rust 在編譯時對使用泛型的程式碼進行單態化（monomorphization）。<em>單態化</em>是個讓泛型程式碼轉換成特定程式碼的過程，在編譯時填入實際的型別。</p>
+<p>Rust 在編譯時對使用泛型的程式碼進行單態化（monomorphization）。<strong>單態化</strong>是個讓泛型程式碼轉換成特定程式碼的過程，在編譯時填入實際的型別。</p>
 <p>在此過程中，編譯器會做與我們在範例 10-5 建立泛型函式相反的事：編譯器檢查所有泛型程式碼被呼叫的地方，並依據泛型程式碼被呼叫的情況產生實際型別的程式碼。</p>
 <p>讓我們看看這在標準函式庫的枚舉 <code>Option&lt;T&gt;</code> 中是怎麼做到的：</p>
 <pre><pre class="playground"><code class="language-rust">
