--- a/ch11-03-test-organization.html
+++ b/ch11-03-test-organization.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#測試組織架構" id="測試組織架構">測試組織架構</a></h2>
-<p>如同本章開頭提到的，測試是個複雜的領域，不同的人可能使用不同的術語與組織架構。Rust 社群將測試分為兩大分類術語：<em>單元測試（unit tests）<em>和</em>整合測試（integration tests）</em>。單元測試比較小且較專注，傾向在隔離環境中一次只測試一個模組，且能夠測試私有介面。整合測試對於你的函式庫來說是個完全外部的程式碼，所以會如其他外部程式碼一樣使用你的程式碼，只能使用公開介面且每個測試可能會有數個模組。</p>
+<p>如同本章開頭提到的，測試是個複雜的領域，不同的人可能使用不同的術語與組織架構。Rust 社群將測試分為兩大分類術語：<strong>單元測試（unit tests）<strong>和</strong>整合測試（integration tests）</strong>。單元測試比較小且較專注，傾向在隔離環境中一次只測試一個模組，且能夠測試私有介面。整合測試對於你的函式庫來說是個完全外部的程式碼，所以會如其他外部程式碼一樣使用你的程式碼，只能使用公開介面且每個測試可能會有數個模組。</p>
 <p>這兩種測試都很重要，且能確保函式庫每個部分能在分別或一起執行的情況下，如你預期的方式運作。</p>
 <h3><a class="header" href="#單元測試" id="單元測試">單元測試</a></h3>
 <p>單元測試的目的是要在隔離其他程式碼的狀況下測試每個程式碼單元，迅速查明程式碼有沒有如預期或非預期的方式運作。你會將單元測試放在 <em>src</em> 目錄中每個你要測試的程式同個檔案下。我們常見的做法是在每個檔案建立一個模組 <code>tests</code> 來包含測試函式，並用 <code>cfg(test)</code> 來詮釋模組。</p>
@@ -333,7 +333,7 @@ fn it_adds_two() {
 <p>注意到 <code>mod common;</code> 的宣告與我們在範例 7-21 說明的模組宣告方式一樣。然而後在測試函式中，我們就可以呼叫函式 <code>common::setup()</code>。</p>
 <h4><a class="header" href="#二進制執行檔-crate-的整合測試" id="二進制執行檔-crate-的整合測試">二進制執行檔 Crate 的整合測試</a></h4>
 <p>如果我們的專案是只包含 <em>src/main.rs</em> 檔案的二進制執行檔 crate 而沒有 <em>src/lib.rs</em> 檔案的話，我們無法在 <em>tests</em> 目錄下建立整合測試，也無法將 <em>src/main.rs</em> 檔案中定義的函式透過 <code>use</code> 陳述式引入作用域。只有函式庫 crate 能公開函式給其他 crate 使用，二進制 crate 只用於獨自執行。</p>
-<p>這也是為何 Rust 專案為二進制執行檔提供直白的 <em>src/main.rs</em> 檔案並允許呼叫 <em>src/lib.rs</em> 檔案中的邏輯程式碼。使用這樣子的架構的話，整合測試<em>可以</em>透過 <code>use</code> 來測試函式庫 crate，並讓重點功能可以公開使用。如果重點功能可以運作的話，那 <em>src/main.rs</em> 檔案中剩下的程式碼部分也能夠如期執行，而這一小部分就不必特定做測試。</p>
+<p>這也是為何 Rust 專案為二進制執行檔提供直白的 <em>src/main.rs</em> 檔案並允許呼叫 <em>src/lib.rs</em> 檔案中的邏輯程式碼。使用這樣子的架構的話，整合測試<strong>可以</strong>透過 <code>use</code> 來測試函式庫 crate，並讓重點功能可以公開使用。如果重點功能可以運作的話，那 <em>src/main.rs</em> 檔案中剩下的程式碼部分也能夠如期執行，而這一小部分就不必特定做測試。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
 <p>Rust 的測試功能提供了判定程式碼怎樣才算正常運作的方法，以確保它能以你預期的方式運作，就算當你做了改變時也是如此。單元測試分別測試函式庫中每個不同的部分，且能測試私有實作細節。整合測試檢查函式庫數個部分一起執行時是否正確無誤，且它們使用函式庫公開 API 來測試程式碼的行為與外部程式碼使用的方式一樣。雖然 Rust 型別系統與所有權規則能避免某些種類的程式錯誤，測試還是減少邏輯程式錯誤的重要辦法，讓你的程式碼能如預期行為運作。</p>
 <p>讓我們統整此章節以及之前的章節所學到的知識來寫一支專案吧！</p>
