--- a/ch12-03-improving-error-handling-and-modularity.html
+++ b/ch12-03-improving-error-handling-and-modularity.html
@@ -229,7 +229,7 @@ fn parse_config(args: &amp;[String]) -&gt; (&amp;str, &amp;str) {
 <p>我們可以再進一步改善 <code>parse_config</code> 函式。目前我們回傳的是元組，但是我們馬上又將元組拆成獨立部分。這是個我們還沒有建立正確抽象的信號。</p>
 <p>另外一個告訴我們還有改善空間的地方是 <code>parse_config</code> 名稱中的 <code>config</code>，這指示我們回傳的兩個數值是相關的，且都是配置數值的一部分。我們現在沒有確實表達出這樣的資料結構，而只有將兩個數值組合成一個元組而已，我們可以將這兩個數值存入一個結構體，並對每個結構體欄位給予有意義的名稱。這樣做能讓未來的維護者可以清楚知道這些數值的不同與關聯，以及它們的用途。</p>
 <blockquote>
-<p>注意：當使用複雜型別會比較理想時，卻仍使用原始數值的反模式（anti-pattern）被稱之為<em>原始型別偏執（primitive obsession）</em>。</p>
+<p>注意：當使用複雜型別會比較理想時，卻仍使用原始數值的反模式（anti-pattern）被稱之為<strong>原始型別偏執（primitive obsession）</strong>。</p>
 </blockquote>
 <p>範例 12-6 改善了 <code>parse_config</code> 函式。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -463,7 +463,7 @@ fn main() {
 </span><span class="boring">}
 </span></code></pre>
 <p><span class="caption">範例 12-10：如果建立新的 <code>Config</code> 失敗時會用錯誤碼離開</span></p>
-<p>在此範例中，我們使用一個還沒介紹過的方法 <code>unwrap_or_else</code>，這定義在標準函式庫的 <code>Result&lt;T, E&gt;</code> 中。使用 <code>unwrap_or_else</code> 讓我們能定義一些自訂的非 <code>panic!</code> 錯誤處理。如果 <code>Result</code> 數值為 <code>Ok</code>，此方法行為就類似於 <code>unwrap</code>，它會回傳<code>Ok</code> 所封裝的內部數值。然而，如果數值為 <code>Err</code> 的話，此方法會呼叫<em>閉包（closure）</em> 內的程式碼，這會是由我們所定義的匿名函式並作為引數傳給 <code>unwrap_or_else</code>。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細介紹閉包。現在你只需要知道 <code>unwrap_or_else</code> 回傳遞 <code>Err</code> 的內部數值，在此例中就是我們在範例 12-9 新增的靜態字串 <code>引數不足</code>，將此數值傳遞給閉包中兩條直線之間的 <code>err</code> 引數。閉包內的程式碼就可以在執行時使用 <code>err</code> 數值。</p>
+<p>在此範例中，我們使用一個還沒介紹過的方法 <code>unwrap_or_else</code>，這定義在標準函式庫的 <code>Result&lt;T, E&gt;</code> 中。使用 <code>unwrap_or_else</code> 讓我們能定義一些自訂的非 <code>panic!</code> 錯誤處理。如果 <code>Result</code> 數值為 <code>Ok</code>，此方法行為就類似於 <code>unwrap</code>，它會回傳<code>Ok</code> 所封裝的內部數值。然而，如果數值為 <code>Err</code> 的話，此方法會呼叫<strong>閉包</strong>（closure）內的程式碼，這會是由我們所定義的匿名函式並作為引數傳給 <code>unwrap_or_else</code>。我們會在<a href="ch13-00-functional-features.html">第十三章</a><!-- ignore -->詳細介紹閉包。現在你只需要知道 <code>unwrap_or_else</code> 回傳遞 <code>Err</code> 的內部數值，在此例中就是我們在範例 12-9 新增的靜態字串 <code>引數不足</code>，將此數值傳遞給閉包中兩條直線之間的 <code>err</code> 引數。閉包內的程式碼就可以在執行時使用 <code>err</code> 數值。</p>
 <p>我們新增了一行 <code>use</code> 來將標準函式庫中的 <code>process</code> 引入作用域。在錯誤情形下要執行的閉包程式碼只有兩行：我們印出 <code>err</code> 數值並呼叫 <code>process::exit</code>。<code>process::exit</code> 函式會立即停止程式並回傳給予的數字來作為退出狀態碼。這與範例 12-8 我們使用 <code>panic!</code> 來處理的方式類似，但我們不再顯示多餘的輸出結果。讓我們試試看：</p>
 <pre><code class="language-console">$ cargo run
    Compiling minigrep v0.1.0 (file:///projects/minigrep)
@@ -578,7 +578,7 @@ fn run(config: Config) {
 </span></code></pre>
 <p><span class="caption">範例 12-12：變更 <code>run</code> 函式來回傳 <code>Result</code></span></p>
 <p>我們在此做了三項明顯的修改。首先，我們改變了 <code>run</code> 函式的回傳型別為 <code>Result&lt;(), Box&lt;dyn Error&gt;&gt;</code>，此函式之前回傳的是單元型別 <code>()</code>，而它現在仍作為 <code>Ok</code> 條件內的數值。</p>
-<p>對於錯誤型別，我們使用<em>特徵物件（trait object）</em> <code>Box&lt;dyn Error&gt;</code>（然後我們在最上方透過 <code>use</code> 陳述式來將 <code>std::error::Error</code> 引入作用域）。我們會在<a href="ch17-00-oop.html">第十七章</a><!-- ignore -->討論特徵物件。現在你只需要知道 <code>Box&lt;dyn Error&gt;</code> 代表函式會回傳有實作 <code>Error</code> 特徵的型別，但我們不必指定回傳值的明確型別。這增加了回傳錯誤數值的彈性，其在不同錯誤情形中可能有不同的型別。<code>dyn</code> 關鍵字是「動態（dynamic）」的縮寫。</p>
+<p>對於錯誤型別，我們使用<strong>特徵物件（trait object）</strong> <code>Box&lt;dyn Error&gt;</code>（然後我們在最上方透過 <code>use</code> 陳述式來將 <code>std::error::Error</code> 引入作用域）。我們會在<a href="ch17-00-oop.html">第十七章</a><!-- ignore -->討論特徵物件。現在你只需要知道 <code>Box&lt;dyn Error&gt;</code> 代表函式會回傳有實作 <code>Error</code> 特徵的型別，但我們不必指定回傳值的明確型別。這增加了回傳錯誤數值的彈性，其在不同錯誤情形中可能有不同的型別。<code>dyn</code> 關鍵字是「動態（dynamic）」的縮寫。</p>
 <p>再來，我們移出了 <code>expect</code> 的呼叫並改為<a href="ch09-02-recoverable-errors-with-result.html#%E5%82%B3%E6%92%AD%E9%8C%AF%E8%AA%A4%E7%9A%84%E6%8D%B7%E5%BE%91-%E9%81%8B%E7%AE%97%E5%AD%90">第九章</a><!-- ignore -->所介紹的 <code>?</code> 運算子。所以與其對錯誤 <code>panic!</code>，<code>?</code> 會回傳當前函式的錯誤數值，並交由呼叫者處理。</p>
 <p>第三，<code>run</code> 函式現在成功時會回傳 <code>Ok</code> 數值。我們在 <code>run</code> 函式簽名中的成功型別為 <code>()</code>，這意味著我們需要將單元型別封裝進 <code>Ok</code> 數值。<code>Ok(())</code> 這樣的語法一開始看可能會覺得有點奇怪，但這樣子使用 <code>()</code> 的確符合慣例，說明我們呼叫 <code>run</code> 只是會了它的副作用，它不會回傳我們需要的數值。</p>
 <p>當你執行此程式時，它雖然能編譯但會顯示一個警告：</p>
