--- a/ch13-01-closures.html
+++ b/ch13-01-closures.html
@@ -300,9 +300,9 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span></code></pre></pre>
 <p><span class="caption">範例 13-4：提取 <code>simulated_expensive_calculation</code> 的呼叫到同個位置並用變數 <code>expensive_result</code> 儲存結果</span></p>
 <p>此變更統一了所有 <code>simulated_expensive_calculation</code> 的呼叫並解決第一個 <code>if</code> 區塊重複呼叫函式兩次的問題。不幸的是，現在我們一定得呼叫此函式並在所有行情形下都得等待，這包含沒有使用到此結果的 <code>if</code> 區塊。</p>
-<p>我們想在程式某處定義程式碼，並在我們確實需要它時<em>執行</em>程式碼就好。這就是閉包能使用的場合！</p>
+<p>我們想在程式某處定義程式碼，並在我們確實需要它時<strong>執行</strong>程式碼就好。這就是閉包能使用的場合！</p>
 <h4><a class="header" href="#透過閉包重構來儲存程式碼" id="透過閉包重構來儲存程式碼">透過閉包重構來儲存程式碼</a></h4>
-<p>與其在 <code>if</code> 區塊之前就呼叫 <code>simulated_expensive_calculation</code> 函式，我們可以定義一個閉包並將<em>閉包</em>存入變數中，而不是儲存函式呼叫的結果，如範例 13-5 所示。我們可以將 <code>simulated_expensive_calculation</code> 的本體移入這個閉包中。</p>
+<p>與其在 <code>if</code> 區塊之前就呼叫 <code>simulated_expensive_calculation</code> 函式，我們可以定義一個閉包並將<strong>閉包</strong>存入變數中，而不是儲存函式呼叫的結果，如範例 13-5 所示。我們可以將 <code>simulated_expensive_calculation</code> 的本體移入這個閉包中。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
@@ -339,7 +339,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 <p><span class="caption">範例 13-5：定義閉包並存入 <code>expensive_closure</code> 變數中</span></p>
 <p>閉包定義位於 <code>expensive_closure</code> 賦值時 <code>=</code> 後面的部分。要定義閉包，我們先從一對直線（<code>|</code>）開始，其內我們會指定閉包的參數，選擇此語法的原因是因為這與 Smalltalk 和 Ruby 的閉包定義類似。此閉包有一個參數 <code>num</code>，如果我們想要不止一個的話，我們可以用逗號來分隔，像是這樣 <code>|param1, param2|</code>。</p>
 <p>在參數之後，我們加上大括號來作為閉包的本體，不過如果閉包本體只是一個表達式的話就不必這樣寫。在閉包結束後，也就是大括號之後，我們要加上分號才能完成 <code>let</code> 陳述式的動作。在閉包本體最後一行的回傳數值就會是當閉包被呼叫時的回傳數值，因為該行沒有以分號做結尾，就像函式本體一樣。</p>
-<p>注意到此 <code>let</code> 陳述式代表 <code>expensive_closure</code> 包含了匿名函式的<em>定義</em>，而不是呼叫匿名函式的<em>回傳數值</em>。回想一下我們使用閉包是為了讓我們能在某處定義程式碼、儲存這段程式碼然後在之後別的地方呼叫它。我們想呼叫的程式碼現在儲存在 <code>expensive_closure</code> 中。</p>
+<p>注意到此 <code>let</code> 陳述式代表 <code>expensive_closure</code> 包含了匿名函式的<strong>定義</strong>，而不是呼叫匿名函式的<strong>回傳數值</strong>。回想一下我們使用閉包是為了讓我們能在某處定義程式碼、儲存這段程式碼然後在之後別的地方呼叫它。我們想呼叫的程式碼現在儲存在 <code>expensive_closure</code> 中。</p>
 <p>有了閉包定義，我們就可以變更 <code>if</code> 區塊內的程式碼呼叫閉包來執行其程式碼並取得結果數值。我們呼叫閉包的方式與呼叫函式一樣：我們指定握有閉包定義的變數名稱，然後在括號內加上我們想使用的引數數值，如範例 13-6 所示：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">use std::thread;
@@ -455,7 +455,7 @@ To learn more, run the command again with --verbose.
 <p>當我們第一次使用 <code>String</code> 數值呼叫 <code>example_closure</code> 時，編譯器會推導 <code>x</code> 與閉包回傳值的型別為 <code>String</code>。這樣 <code>example_closure</code> 閉包內的型別就會鎖定，然後我們如果對同樣的閉包嘗試使用不同的型別的話，我們就會得到型別錯誤。</p>
 <h3><a class="header" href="#透過泛型參數與-fn-特徵儲存閉包" id="透過泛型參數與-fn-特徵儲存閉包">透過泛型參數與 <code>Fn</code> 特徵儲存閉包</a></h3>
 <p>讓我們回到我們的重訓生成應用程式。在範例 13-6 中，我們的程式碼仍然會呼叫耗時的閉包不止一次。其中一個解決此問題的選項是將耗時閉包的結果存入變數中，並在我們需要結果的地方使用該變數，而不是再呼叫閉包一次。不過此方法可能會增加很多重複的程式碼。</p>
-<p>幸運的是我們還有另一個解決辦法。我們可以建立一個結構體來儲存閉包以及呼叫閉包的結果數值。此結構體只會在我們需要結果數值時執行閉包，然後它會獲取結果數值，所以我們的程式碼就不必負責儲存要重複使用的結果。你可能會聽過這種模式叫做<em>記憶化（memoization）<em>或</em>惰性求值（lazy evaluation）</em>。</p>
+<p>幸運的是我們還有另一個解決辦法。我們可以建立一個結構體來儲存閉包以及呼叫閉包的結果數值。此結構體只會在我們需要結果數值時執行閉包，然後它會獲取結果數值，所以我們的程式碼就不必負責儲存要重複使用的結果。你可能會聽過這種模式叫做<strong>記憶化（memoization）<strong>或</strong>惰性求值（lazy evaluation）</strong>。</p>
 <p>要定義一個結構體儲存一個閉包，我們需要指定閉包的型別，因為結構體定義需要知道它每個欄位的型別。每個閉包實例都有自己獨特的匿名型別，也就是說就算有兩個閉包的簽名一模一樣，它們的型別還是會被視為不同的。要定義有使用閉包的結構體、枚舉或函式參數的話，我們可以使用在第十章所提到的泛型與特徵界限。</p>
 <p>標準函式庫有提供 <code>Fn</code> 特徵，所有閉包都有實作至少以下一種特徵：<code>Fn</code>、<code>FnMut</code> 或 <code>FnOnce</code>。我們會在<a href="#%E9%80%8F%E9%81%8E%E9%96%89%E5%8C%85%E7%8D%B2%E5%8F%96%E7%92%B0%E5%A2%83">「透過閉包獲取環境」</a><!-- ignore -->段落中討論這些特徵的不同。在此例中，我們可以使用 <code>Fn</code> 特徵。</p>
 <p>我們在 <code>Fn</code> 特徵界限加上了型別來表示閉包參數與回傳值必須擁有的型別。在此例中，我們的閉包參數型別為 <code>u32</code> 且回傳 <code>u32</code>，所以我們指定的特徵界限為 <code>Fn(u32) -&gt; u32</code>。</p>
@@ -476,7 +476,7 @@ where
 <blockquote>
 <p>注意：函式也會實作這三個 <code>Fn</code> 特徵。如果我們想做的事情不需要獲取環境數值，我們可以使用實現 <code>Fn</code> 特徵的函式而非閉包。</p>
 </blockquote>
-<p><code>value</code> 欄位型別為 <code>Option&lt;u32&gt;</code>。在我們執行閉包前，<code>value</code> 會是 <code>None</code>。當有程式碼使用 <code>Cacher</code> 要求取得閉包<em>結果</em>時，<code>Cacher</code> 就會在那時候執行閉包並以 <code>Some</code> 變體儲存結果到 <code>value</code> 欄位。然後如果有程式碼再次要求閉包結果時，我們就不必再執行閉包一次，可以靠 <code>Cacher</code> 回傳 <code>Some</code> 變體內的結果。</p>
+<p><code>value</code> 欄位型別為 <code>Option&lt;u32&gt;</code>。在我們執行閉包前，<code>value</code> 會是 <code>None</code>。當有程式碼使用 <code>Cacher</code> 要求取得閉包<strong>結果</strong>時，<code>Cacher</code> 就會在那時候執行閉包並以 <code>Some</code> 變體儲存結果到 <code>value</code> 欄位。然後如果有程式碼再次要求閉包結果時，我們就不必再執行閉包一次，可以靠 <code>Cacher</code> 回傳 <code>Some</code> 變體內的結果。</p>
 <p>我們討論這個有關 <code>value</code> 欄位的邏輯定義就如範例 13-10 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">struct Cacher&lt;T&gt;
@@ -715,7 +715,7 @@ To learn more, run the command again with --verbose.
 <p>當閉包從它的環境獲取數值時，它會在閉包本體中使用記憶體來儲存這個數值。這種儲存記憶體的方式會產生額外開銷。在更常見的場合中，也就是不需要獲取程式碼的環境時，我們並不希望產生這種開銷。因為函式並不允許獲取它們的環境，定義與使用函式就不會產生這種開銷。</p>
 <p>閉包可以用三種方式獲取它們的環境，這剛好能對應到函式取得參數的三種方式：取得所有權、可變借用與不可變借用。這就被定義成以下三種 <code>Fn</code> 特徵：</p>
 <ul>
-<li><code>FnOnce</code> 會消耗周圍作用域中，也就是閉包的<em>環境</em>，所獲取變數。要消耗掉所獲取的變數，閉包必須取得這些變數的所有權並在定義時將它們移入閉包中。特徵名稱中的 <code>Once</code> 指的是因為閉包無法取得相同變數的所有權一次以上，所以它只能被呼叫一次。</li>
+<li><code>FnOnce</code> 會消耗周圍作用域中，也就是閉包的<strong>環境</strong>，所獲取變數。要消耗掉所獲取的變數，閉包必須取得這些變數的所有權並在定義時將它們移入閉包中。特徵名稱中的 <code>Once</code> 指的是因為閉包無法取得相同變數的所有權一次以上，所以它只能被呼叫一次。</li>
 <li><code>FnMut</code> 可以改變環境，因為它取得的是可變的借用數值。</li>
 <li><code>Fn</code> 則取得環境中不可變的借用數值。</li>
 </ul>
