--- a/ch14-02-publishing-to-crates-io.html
+++ b/ch14-02-publishing-to-crates-io.html
@@ -175,7 +175,7 @@
 <p>我們已經使用過 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的套件來作為我們專案的依賴函式庫，但是你也可以發佈你自己的套件來將你的程式碼提供給其他人使用。<a href="https://crates.io/">crates.io</a><!-- ignore --> 會發行套件的原始碼，所以它主要用來託管開源程式碼。</p>
 <p>Rust 與 Cargo 有許多功能可以幫助其他人更容易找到並使用你發佈的套件。我們會介紹其中一些功能並解釋如何發佈套件。</p>
 <h3><a class="header" href="#寫上有幫助的技術文件註解" id="寫上有幫助的技術文件註解">寫上有幫助的技術文件註解</a></h3>
-<p>準確地加上套件的技術文件有助於其他使用者知道如何及何時使用它們，所以投資時間在寫技術文件上是值得的。在第三章我們提過如何使用兩條斜線 <code>//</code> 來加上 Rust 程式碼註解。Rust 還有個特別的註解用來作為技術文件，俗稱為<em>技術文件註解（documentation comment）</em>，這能用來產生 HTML 技術文件。這些 HTML 顯示公開 API 項目中技術文件註解的內容，讓對此函式庫有興趣的開發者知道如何<em>使用</em>你的 crate，而不需知道 crate 是如何<em>實作</em>的。</p>
+<p>準確地加上套件的技術文件有助於其他使用者知道如何及何時使用它們，所以投資時間在寫技術文件上是值得的。在第三章我們提過如何使用兩條斜線 <code>//</code> 來加上 Rust 程式碼註解。Rust 還有個特別的註解用來作為技術文件，俗稱為<strong>技術文件註解（documentation comment）</strong>，這能用來產生 HTML 技術文件。這些 HTML 顯示公開 API 項目中技術文件註解的內容，讓對此函式庫有興趣的開發者知道如何<strong>使用</strong>你的 crate，而不需知道 crate 是如何<strong>實作</strong>的。</p>
 <p>技術文件註解使用三條斜線 <code>///</code> 而不是兩條，並支援 Markdown 符號來格式化文字。技術文件註解位於它們對應項目的上方。範例 14-1 顯示了 <code>my_crate</code> crate 中 <code>add_one</code> 的技術文件註解：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore">/// Adds one to the number given.
@@ -253,7 +253,7 @@ test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 <h3><a class="header" href="#透過-pub-use-匯出理想的公開-api" id="透過-pub-use-匯出理想的公開-api">透過 <code>pub use</code> 匯出理想的公開 API</a></h3>
 <p>在第七章中，我們介紹了如何使用 <code>mod</code> 關鍵字來組織我們的程式碼成模組、如何使用 <code>pub</code> 關鍵字來公開項目，以及如何使用 <code>use</code> 關鍵字在將項目引入作用域。然而在開發 crate 時的架構雖然對你來說是合理的，但對你的使用者來說可能就不是那麼合適了。你可能會希望用有數個層級的分層架構來組織你的程式碼，但是要是有人想使用你定義在分層架構裡的型別時，它們可能就很難發現這些型別的存在。而且輸入 <code>use my_crate::some_module::another_module::UsefulType;</code> 是非常惱人的，我們會希望輸入 <code>use my_crate::UsefulType;</code> 就好。</p>
 <p>公開 API 的架構是發佈 crate 時要考量到的一大重點。使用 crate 的人可能並沒有你那麼熟悉其中的架構，而且如果你的 crate 模組分層越深的話，他們可能就難以找到他們想使用的部分。</p>
-<p>好消息是如果你的架構<em>不便於</em>其他函式庫所使用的話，你不必重新組織你的內部架構：你可以透過使用 <code>pub use</code>選擇重新匯出（re-export）項目來建立一個不同於內部私有架構的公開架構。重新匯出會先取得某處的公開項目，再從其他地方使其公開，讓它像是被定義在其他地方一樣。</p>
+<p>好消息是如果你的架構<strong>不便於</strong>其他函式庫所使用的話，你不必重新組織你的內部架構：你可以透過使用 <code>pub use</code>選擇重新匯出（re-export）項目來建立一個不同於內部私有架構的公開架構。重新匯出會先取得某處的公開項目，再從其他地方使其公開，讓它像是被定義在其他地方一樣。</p>
 <p>舉例來說，我們建立了一個函式庫叫做 <code>art</code> 來模擬藝術概念。在函式庫中有兩個模組：<code>kinds</code> 模組包含兩個枚舉 <code>PrimaryColor</code> 和 <code>SecondaryColor</code>；而 <code>utils</code> 模組包含一個函式 <code>mix</code>，如範例 14-3 所示：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">//! # Art
@@ -368,7 +368,7 @@ fn main() {
 <p>在你可以發佈任何 crate 之前，你需要建立一個 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的帳號並取得一個 API token。請前往 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的首頁並透過 GitHub 帳號來登入（GitHub 目前是必要的，但未來可能會支援其他建立帳號的方式）一旦你登入好了之後，到你的帳號設定 <a href="https://crates.io/me/">https://crates.io/me/</a><!-- ignore --> 並索取你的 API key，然後用這個 API key 來執行  <code>cargo login</code> 命令，如以下所示：</p>
 <pre><code class="language-console">$ cargo login abcdefghijklmnopqrstuvwxyz012345
 </code></pre>
-<p>此命令會傳遞你的 API token 給 Cargo 並儲存在本地的 <em>~/.cargo/credentials</em>。注意此 token 是個<em>祕密（secret）</em>，千萬不要分享給其他人。如果你因為任何原因分享給任何人的話，你最好撤銷掉並回到 <a href="https://crates.io/">crates.io</a><!-- ignore --> 產生新的 token。</p>
+<p>此命令會傳遞你的 API token 給 Cargo 並儲存在本地的 <em>~/.cargo/credentials</em>。注意此 token 是個<strong>祕密（secret）</strong>，千萬不要分享給其他人。如果你因為任何原因分享給任何人的話，你最好撤銷掉並回到 <a href="https://crates.io/">crates.io</a><!-- ignore --> 產生新的 token。</p>
 <h3><a class="header" href="#新增詮釋資料到新的-crate" id="新增詮釋資料到新的-crate">新增詮釋資料到新的 Crate</a></h3>
 <p>現在你已經有個帳號，然後讓我們假設你有個 crate 想要發佈。在發佈之前，你需要對你的 crate 加上一些詮釋資料（metadata），也就是在 crate 的 <em>Cargo.toml</em> 檔案中 <code>[package]</code> 的段落內加上更多資料。</p>
 <p>你的 crate 必須要有個獨特的名稱。雖然你在本地端開發 crate 時，你的 crate 可以是任何你想要的名稱。但是 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上的 crate 名稱採先搶先贏制。一旦有 crate 名稱被取走了，其他人就不能再使用該名稱來發佈 crate。在嘗試發佈 crate 前，最好先在 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上搜尋你想使用的名稱。如果該名稱已被其他 crate 使用，你就需要想另一個名稱，並在 <em>Cargo.toml</em> 檔案中 <code>[package]</code> 段落的 <code>name</code> 欄位使用新的名稱來發佈，如以下所示：</p>
@@ -414,7 +414,7 @@ license = &quot;MIT OR Apache-2.0&quot;
 <p><a href="https://doc.rust-lang.org/cargo/">Cargo 技術文件</a>還介紹了其他你可以指定的詮釋資料，讓你的 crate 更容易被其他人發掘並使用。</p>
 <h3><a class="header" href="#發佈至-cratesio" id="發佈至-cratesio">發佈至 Crates.io</a></h3>
 <p>現在你已經建立了帳號、儲存了 API token、選擇了 crate 的獨特名稱並指定了所需的詮釋資料，你現在已經準備好發佈了！發佈 crate 會上傳一個指定版本到 <a href="https://crates.io/">crates.io</a><!-- ignore --> 供其他人使用。</p>
-<p>發佈 crate 時請格外小心，因為發佈是會<em>永遠</em>存在的。該版本無法被覆寫，而且程式碼無法被刪除。<a href="https://crates.io/">crates.io</a><!-- ignore --> 其中一個主要目標就是要作為儲存程式碼的永久伺服器，讓所有依賴 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的 crate 的專案可以持續正常運作。允許刪除版本會讓此目標幾乎無法達成。不過你能發佈的 crate 版本不會有數量限制。</p>
+<p>發佈 crate 時請格外小心，因為發佈是會<strong>永遠</strong>存在的。該版本無法被覆寫，而且程式碼無法被刪除。<a href="https://crates.io/">crates.io</a><!-- ignore --> 其中一個主要目標就是要作為儲存程式碼的永久伺服器，讓所有依賴 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的 crate 的專案可以持續正常運作。允許刪除版本會讓此目標幾乎無法達成。不過你能發佈的 crate 版本不會有數量限制。</p>
 <p>再次執行 <code>cargo publish</code> 命令，這次就應該會成功了：</p>
 <!-- manual-regeneration
 go to some valid crate, publish a new version
@@ -434,7 +434,7 @@ copy just the relevant lines below
 <h3><a class="header" href="#對現有-crate-發佈新版本" id="對現有-crate-發佈新版本">對現有 Crate 發佈新版本</a></h3>
 <p>當你對你的 crate 做了一些改變並準備好發佈新版本時，你可以變更 <em>Cargo.toml</em> 中的 <code>version</code> 數值，並再發佈一次。請使用<a href="https://semver.org/lang/zh-TW/">語意化版本規則</a>依據你作出的改變來決定下一個妥當的版本數字。接著執行 <code>cargo publish</code> 來上傳新版本。</p>
 <h3><a class="header" href="#透過-cargo-yank-移除-cratesio-的版本" id="透過-cargo-yank-移除-cratesio-的版本">透過 <code>cargo yank</code> 移除 Crates.io 的版本</a></h3>
-<p>雖然你無法刪除 crate 之前的版本，你還是可以防止任何未來的專案加入它們作為依賴。這在 crate 版本因某些原因而被破壞時會很有用。在這樣的情況下，Cargo 支援<em>撤回（yanking）</em> crate 版本。</p>
+<p>雖然你無法刪除 crate 之前的版本，你還是可以防止任何未來的專案加入它們作為依賴。這在 crate 版本因某些原因而被破壞時會很有用。在這樣的情況下，Cargo 支援<strong>撤回（yanking）</strong> crate 版本。</p>
 <p>撤回一個版本能防止新專案用該版本作為依賴，同時允許現存依賴它的專案能夠繼續下載並依賴該版本。實際上，撤回代表所有專案的 <em>Cargo.lock</em> 都不會被破壞，且任何未來產生的 <em>Cargo.lock</em> 檔案不會使用被撤回的版本。</p>
 <p>要撤回一個 crate 的版本，執行 <code>cargo yank</code> 並指定你想撤回的版本：</p>
 <pre><code class="language-console">$ cargo yank --vers 1.0.1
@@ -442,7 +442,7 @@ copy just the relevant lines below
 <p>而對命令加上 <code>--undo</code> 的話，你還可以在復原撤回的動作，允許其他專案可以再次依賴該版本：</p>
 <pre><code class="language-console">$ cargo yank --vers 1.0.1 --undo
 </code></pre>
-<p>撤回<em>並不會</em>刪除任何程式碼。舉例來說，撤回此功能並不會刪除任何不小心上傳的祕密訊息。如果真的出現這種情形，你必須立即重設那些資訊。</p>
+<p>撤回<strong>並不會</strong>刪除任何程式碼。舉例來說，撤回此功能並不會刪除任何不小心上傳的祕密訊息。如果真的出現這種情形，你必須立即重設那些資訊。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
