--- a/ch14-04-installing-binaries.html
+++ b/ch14-04-installing-binaries.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#透過-cargo-install-從-cratesio-安裝二進制執行檔" id="透過-cargo-install-從-cratesio-安裝二進制執行檔">透過 <code>cargo install</code> 從 Crates.io 安裝二進制執行檔</a></h2>
-<p><code>cargo install</code> 命令讓你能本地安裝並使用二進制執行檔 crates。這並不是打算要取代系統套件，這是為了方便讓 Rust 開發者可以安裝 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上分享的工具。注意你只能安裝有二進制目標的套件。<em>二進制目標（binary target）</em> 是在 crate 有 <em>src/main.rs</em> 檔案或其他指定的二進制檔案時，所建立的可執行程式。而相反地，函式庫目標就無法單獨執行，因為它提供給其他程式使用的函式庫。通常 crate 都會提供 <em>README</em> 檔案說明此 crate 是函式庫還是二進制目標，或者兩者都是。</p>
+<p><code>cargo install</code> 命令讓你能本地安裝並使用二進制執行檔 crates。這並不是打算要取代系統套件，這是為了方便讓 Rust 開發者可以安裝 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上分享的工具。注意你只能安裝有二進制目標的套件。<strong>二進制目標</strong>（binary target）是在 crate 有 <em>src/main.rs</em> 檔案或其他指定的二進制檔案時，所建立的可執行程式。而相反地，函式庫目標就無法單獨執行，因為它提供給其他程式使用的函式庫。通常 crate 都會提供 <em>README</em> 檔案說明此 crate 是函式庫還是二進制目標，或者兩者都是。</p>
 <p>所有透過 <code>cargo install</code> 安裝的二進制檔案都儲存在安裝根目錄的 <em>bin</em> 資料夾中。如果你是用 <em>rustup.rs</em>  安裝 Rust 且沒有任何自訂設置的話，此目錄會是 <em>$HOME/.cargo/bin</em>。請確定該目錄有在你的 <code>$PATH</code> 中，這樣才能夠執行 <code>cargo install</code> 安裝的程式。</p>
 <p>舉例來說，第十二章我們提到有個 Rust 版本的 <code>grep</code> 工具叫做 <code>ripgrep</code> 能用來搜尋檔案。如果我們想要安裝 <code>ripgrep</code> 的話，我們可以執行以下命令：</p>
 <!-- manual-regeneration
