--- a/ch16-01-threads.html
+++ b/ch16-01-threads.html
@@ -172,7 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#使用執行緒同時執行程式碼" id="使用執行緒同時執行程式碼">使用執行緒同時執行程式碼</a></h2>
-<p>在大部分的現代作業系統中，被執行的程式碼會在<em>程序（process）<em>中執行，作業系統會負責同時處理數個程序。在你的程式中，你也可以將各自獨立的部分同時執行。執行這些獨立部分的功能就叫做</em>執行緒（threads）</em>。</p>
+<p>在大部分的現代作業系統中，被執行的程式碼會在<strong>程序（process）<strong>中執行，作業系統會負責同時處理數個程序。在你的程式中，你也可以將各自獨立的部分同時執行。執行這些獨立部分的功能就叫做</strong>執行緒（threads）</strong>。</p>
 <p>將程式中的運算拆成數個執行緒可以提升效能，因為程式能同時執行多項任務，不過這也同時增加了複雜度。因為執行緒可以同時執行，所以無法保證不同執行緒的程式碼執行的順序。這會導致以下問題：</p>
 <ul>
 <li>競爭條件（Race conditions）：數個執行緒以不一致的順序取得資料或資源</li>
@@ -181,9 +181,9 @@
 </ul>
 <p>Rust 嘗試降低使用執行緒所帶來的負面效果，不過對於多執行緒程式設計還是得格外小心，其所要求的程式結構也與單一執行緒的程式有所不同。</p>
 <p>不同程式語言會以不同的方式實作執行緒。許多作業系統都有提供 API 來建立新的執行緒。這樣讓一個語言呼叫作業系統 APIs 來建立執行緒的方式有時會稱為 <em>1:1</em>，代表每一個語言產生的執行緒就是一個作業系統的執行緒。</p>
-<p>而有許多程式語言會提供它們自己的特殊執行緒實作。程式語言提供的執行緒被稱為<em>綠色執行緒（green thread）</em> ，而使用綠色執行緒的語言底層會執行數個作業系統執行緒。因此綠色執行緒的模型會被稱為 <em>M:N</em>：每 <code>M</code> 個綠色執行緒會有 <code>N</code> 作業系統執行緒，<code>M</code> 和 <code>N</code> 的數量可能會不相同。</p>
-<p>每種模型都有它的優勢與取捨，而對 Rust 來說最重要的取捨就是執行時支援。<em>執行時（Runtime）</em> 是個令人困惑的術語且在不同場合會帶有不同意義。</p>
-<p>在這裡我們指的<em>執行時</em>是每個二進制檔案中語言所提供的程式碼。此程式碼根據不同語言可大可小，但每個非組合語言的語言都一定會有一些執行時程式碼。所以說當人們常說一個語言「沒有執行時」的話，他們常常指的是「小執行時」。較小的執行時提供的功能就較少，但優勢在於可以產生較小的二進制檔案，這能使得與其他語言結合更加容易。雖然許多語言都能接受增加執行時的大小來換取更多功能，但 Rust 需要做到幾乎沒有執行時，且必須能夠呼叫 C 來維持效能，這也是不能妥協的。</p>
+<p>而有許多程式語言會提供它們自己的特殊執行緒實作。程式語言提供的執行緒被稱為<strong>綠色執行緒</strong>（green thread），而使用綠色執行緒的語言底層會執行數個作業系統執行緒。因此綠色執行緒的模型會被稱為 <em>M:N</em>：每 <code>M</code> 個綠色執行緒會有 <code>N</code> 作業系統執行緒，<code>M</code> 和 <code>N</code> 的數量可能會不相同。</p>
+<p>每種模型都有它的優勢與取捨，而對 Rust 來說最重要的取捨就是執行時支援。<strong>執行時</strong>（Runtime）是個令人困惑的術語且在不同場合會帶有不同意義。</p>
+<p>在這裡我們指的<strong>執行時</strong>是每個二進制檔案中語言所提供的程式碼。此程式碼根據不同語言可大可小，但每個非組合語言的語言都一定會有一些執行時程式碼。所以說當人們常說一個語言「沒有執行時」的話，他們常常指的是「小執行時」。較小的執行時提供的功能就較少，但優勢在於可以產生較小的二進制檔案，這能使得與其他語言結合更加容易。雖然許多語言都能接受增加執行時的大小來換取更多功能，但 Rust 需要做到幾乎沒有執行時，且必須能夠呼叫 C 來維持效能，這也是不能妥協的。</p>
 <p>綠色執行緒 M:N 模組需要更大的語言執行時來管理執行緒。因此 Rust 標準函式庫只提供了 1:1 執行緒的實作。因為 Rust 屬於低階語言。如果你寧願花費一些開銷以換取像是更容易地控制執行緒於何時執行，或者能降低環境切換成本等功能的話，你可以尋找有實作 M:N 執行緒的 crate。</p>
 <p>現在我們已經定義了 Rust 中的執行緒，讓我們來探討如何使用標準函式庫提供的執行緒 API 吧。</p>
 <h3><a class="header" href="#透過-spawn-建立新的執行緒" id="透過-spawn-建立新的執行緒">透過 <code>spawn</code> 建立新的執行緒</a></h3>
@@ -247,7 +247,7 @@ fn main() {
 }
 </code></pre></pre>
 <p><span class="caption">範例 16-2：從 <code>thread::spawn</code> 儲存 <code>JoinHandle</code> 以保障執行緒能執行完成</span></p>
-<p>對其呼叫 <code>join</code> 會阻擋當前正在執行的執行緒中直到 <code>JoinHandle</code> 的執行緒結束為止。<em>阻擋（Blocking）</em> 一條執行緒代表該執行緒不會繼續運作或離開。因為我們在主執行緒的 <code>for</code> 迴圈之後加上了 <code>join</code> 的呼叫，範例 16-2 應該會產生類似以下的輸出：</p>
+<p>對其呼叫 <code>join</code> 會阻擋當前正在執行的執行緒中直到 <code>JoinHandle</code> 的執行緒結束為止。<strong>阻擋</strong>（Blocking）一條執行緒代表該執行緒不會繼續運作或離開。因為我們在主執行緒的 <code>for</code> 迴圈之後加上了 <code>join</code> 的呼叫，範例 16-2 應該會產生類似以下的輸出：</p>
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
@@ -355,7 +355,7 @@ error: could not compile `threads`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Rust 會<em>推斷</em>如何獲取 <code>v</code> 而且因為 <code>println!</code> 只需要 <code>v</code> 的引用，閉包得借用 <code>v</code>。不過這會有個問題，Rust 無法知道產生的執行緒會執行多久，所以它無法確定 <code>v</code> 的引用是不是永遠有效。</p>
+<p>Rust 會<strong>推斷</strong>如何獲取 <code>v</code> 而且因為 <code>println!</code> 只需要 <code>v</code> 的引用，閉包得借用 <code>v</code>。不過這會有個問題，Rust 無法知道產生的執行緒會執行多久，所以它無法確定 <code>v</code> 的引用是不是永遠有效。</p>
 <p>範例 16-4 提供了一個情境讓 <code>v</code> 很有可能不再有效：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">use std::thread;
@@ -423,7 +423,7 @@ error: could not compile `threads`.
 To learn more, run the command again with --verbose.
 </code></pre>
 <p>Rust 的所有權規則再次拯救了我們！我們在範例 16-3 會得到錯誤是因為 Rust 是保守的，所以只會為執行緒借用 <code>v</code>，這代表主執行緒理論上可能會使產生的執行緒的引用無效化。透過告訴 Rust 將 <code>v</code> 的所有權移入產生的執行緒中，我們向 Rust 保證不會在主執行緒用到 <code>v</code>。如果我們用相同方式修改範例 16-4 的話，當我們嘗試在主執行緒使用 <code>v</code> 的話，我們就違反了所有權規則。<code>move</code> 關鍵字會覆蓋 Rust 保守的預設借用行為，且也不允許我們違反所有權規則。</p>
-<p>有了對執行緒與執行緒 API 的基本瞭解，讓我們看看我們可以透過執行緒<em>做些</em>什麼。</p>
+<p>有了對執行緒與執行緒 API 的基本瞭解，讓我們看看我們可以透過執行緒<strong>做些</strong>什麼。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
