--- a/title-page.html
+++ b/title-page.html
@@ -185,7 +185,7 @@
 <li>附錄 D 現在的標題為「實用開發工具」，其中涵蓋有近期推出的工具，這些能在你撰寫 Rust 程式碼時幫助到你。</li>
 <li>我們修正了整本書中一些小錯誤與不精確的措辭。感謝各位讀者的回報！</li>
 </ul>
-<p>值得注意的是 <em>Rust 程式設計語言</em>早期疊代版本中的程式碼在專案中 <em>Cargo.toml</em> 移除 <code>edition=&quot;2018&quot;</code> 的話就能繼續編譯，儘管你升級了 Rust 編譯器也是如此。Rust 的向下相容保證一切可以正常運行！</p>
+<p>值得注意的是 <strong>Rust 程式設計語言</strong>早期疊代版本中的程式碼在專案中 <em>Cargo.toml</em> 移除 <code>edition=&quot;2018&quot;</code> 的話就能繼續編譯，儘管你升級了 Rust 編譯器也是如此。Rust 的向下相容保證一切可以正常運行！</p>
 <p>本書的 HTML 格式可以在線上閱讀：<a href="https://doc.rust-lang.org/stable/book/">https://doc.rust-lang.org/stable/book/</a>（<a href="https://rust-lang.tw/book-tw/">正體中文版</a>）。而離線版則包含在 <code>rustup</code> 安裝的 Rust 中，輸入 <code>rustup docs --book</code> 就能開啟。</p>
 <p>本書也有由 <a href="https://nostarch.com/rust">No Starch Press 出版平裝與電子版格式</a>。</p>
 <blockquote>
